Update for Patch v3.11.1 - checksum: 0a36

--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -112,10 +112,10 @@
  STARBASE_DISMANTLE_AT_WAR:1 "§RCannot dismantle Starbases while at war§!"
  STARBASE_RETURN_CONTROL_IS_OWNER:0 "§Rเราเป็นเจ้าของฐานอวกาศนี้§!"
  STARBASE_RETURN_CONTROL_IS_CONTROLLER:0 "§RWe do not control this Starbase§!"
- STARBASE_DOWNGRADE_IN_COMBAT:0 "§RCannot downgrade Starbases that are engaged in combat§!"
+ STARBASE_DOWNGRADE_IN_COMBAT:0 "§Rไม่สามารถดาวน์เกรดฐานอวกาศที่กำลังถูกโจมตีได้§!"
  STARBASE_DEFENSE_UPGRADE_IN_COMBAT:0 "Cannot upgrade Starbase defense platforms while the Starbase is engaged in combat"
  STARBASE_IS_DISABLED:0 "§RThe Starbase is disabled§!"
- STARBASE_IN_USE:0 "§RCannot downgrade or dismantle Starbases that have an active construction queue.§!"
+ STARBASE_IN_USE:0 "§Rไม่สามารถดาวน์เกรดหรือรื้อถอนฐานอวกาศที่มีคิวก่อสร้างอยู่ได้§!"
  STARBASE_UNDER_OCCUPATION:0 "§RNot possible while the Starbase is under occupation.§!"
  STARBASE_DISABLED:0 "§RThis Starbase is disabled.§!"
  STARBASE_MODULES:0 "โมดูลชิ้นส่วนต่างๆ"
