--- a/mod/thmod/localisation/english/dip_messages_l_english.yml
+++ b/mod/thmod/localisation/english/dip_messages_l_english.yml
@@ -917,7 +917,7 @@
  01_ASK_FOR_VASS_SELECT:1 "So you wish to become our subjects? Tell me more..."
  01_ASK_FOR_VASS_ACCEPT:0 "Very well, [From.GetAdj], we will protect you as your new overlords."
  01_ASK_FOR_VASS_REFUSE:1 "We do not want you as our subjects. We have other plans for your planets..."
- 01_ASK_FOR_VASS_PROPOSE:1 "We are too weak to survive on our own in this hostile galaxy... Will the §Y[Root.GetName]§! protect us if we become your subject?"
+ 01_ASK_FOR_VASS_PROPOSE:1 "เราอ่อนแอเกินกว่าจะอยู่รอดได้ด้วยตัวเองในกาแล็กซีนี้... §Y[Root.GetName]§! จะปกป้องเรา ถ้าเราเป็นบริวารของคุณ?"
  01_DEMAND_PROT_SELECT:0 "$01_DEMAND_VASS_SELECT$"
  02_DEMAND_PROT_SELECT:1 "You wish to become our protector?"
  03_DEMAND_PROT_SELECT:0 "$03_DEMAND_VASS_SELECT$"
@@ -932,7 +932,7 @@
  01_ASK_FOR_PROT_SELECT:0 "So you seek our protection? Tell me more..."
  01_ASK_FOR_PROT_ACCEPT:0 "Very well, [From.GetAdj], we will protect you as your new overlords."
  01_ASK_FOR_PROT_REFUSE:0 "We do not want to be responsible for your well-being. We have other plans for your planets..."
- 01_ASK_FOR_PROT_PROPOSE:0 "We are too weak to survive on our own in this hostile galaxy... Will the §Y[Root.GetName]§! protect us?"
+ 01_ASK_FOR_PROT_PROPOSE:0 "เราอ่อนแอเกินกว่าจะอยู่รอดได้ด้วยตัวเองในกาแล็กซีนี้... §Y[Root.GetName]§! จะปกป้องเรา?"
  01_RELEASE_SUBJECT_SELECT:0 "Why do you not want us as your subject?"
  01_RELEASE_SUBJECT_PROPOSE:0 "We have decided to release you. You are only holding us back."
  01_RELEASE_SUBJECT_ACCEPT:0 "We are sad and disappointed to see you go, [From.GetName]."
