--- a/mod/thmod/localisation/english/events_6_l_english.yml
+++ b/mod/thmod/localisation/english/events_6_l_english.yml
@@ -374,16 +374,16 @@
  colony.9975.name: "Vent Expansion Failure"
  colony.9975.desc: "Miscalculations with the mining charges caused several vents to fracture and eventually topple to the ground, resulting in considerable damage to our facilities. While some refineries are now producing more gas than before, the total yield has decreased. The silver lining is that the collapsed structures have revealed unexpected sources of minerals.\n\nThese events act as a reminder that galaxy-spanning civilizations cannot be built without cracking a few vents."
  nemma_world_chain_title: "Nemma World"
- nemma_world_chain_desc: "The titanic Nemma inhabit one of our worlds and we have already built the foundation of a colony on their backs. We will need to decide what to do wtih them."
+ nemma_world_chain_desc: "The titanic Nemma inhabit one of our worlds and we have already built the foundation of a colony on their backs. We will need to decide what to do with them."
  job_stratovent_researcher: "Vent Researcher"
  job_stratovent_researcher_plural: "Vent Researchers"
- job_stratovent_researcher_desc: "Researchers specialized in studying spaceborne fauna and guiding travellers to see them."
+ job_stratovent_researcher_desc: "Researchers specialized in studying spaceborne fauna and guiding travelers to see them."
  job_stratovent_refiner: "Vent Refiner"
  job_stratovent_refiner_plural: "Vent Refiners"
  job_stratovent_refiner_desc: "Workers specialized in gathering and refining precious gasses from the Stratospheric Vents."
  job_stratovent_refiner_upg: "Expanded Vent Refiner"
  job_stratovent_refiner_upg_plural: "Expanded Vent Refiners"
- job_stratovent_refiner_upg_desc: "Researchers specialized in studying spaceborne fauna and educating travellers on their behaviour."
+ job_stratovent_refiner_upg_desc: "Researchers specialized in studying spaceborne fauna and educating travelers on their behavior."
  job_stratovent_refiner_minerals: "Collapsed Vent Refiner"
  job_stratovent_refiner_minerals_plural: "Collapsed Vent Refiners"
  job_stratovent_refiner_minerals_desc: "Workers specialized in gathering and refining precious gasses from the Stratospheric Vents."
@@ -401,7 +401,7 @@
  MESSAGE_HYPERDRIVE_SECURED:0 "Our away party managed to pacify the arthropoids and escape with the research."
  the_lonely_bot_welcome:0 "A Helping Hand"
  the_lonely_bot_welcome_desc:0 "The little robot who lives on the planet has gone out of its way to help our colonists settle down and establish themselves."
- eldritch_horror_mod:0 "Eldritch Knowledge"
+ eldritch_horror_mod:0 "ความรู้จากสิ่งที่น่ากลัว"
  eldritch_horror_mod_desc:0 "Knowledge given to the empire by an eldritch being. In return it only asks for a small fraction of our population."
  crystalline_architecture_mod:0 "Crystalline Architecture"
  crystalline_architecture_mod_desc:0 "Improvements made to the layout have opened up more space for the residents on the habitat."
@@ -1572,3 +1572,8 @@
  trait_presapient_unintelligent: "Unintelligent"
  trait_presapient_unintelligent_desc: "§HThis species is unable to complete even the simplest tasks. Their only skill is the incredible speed at which they reproduce.§!"
  rapid_desertification_species: "Desertling"
+ BREACHSEALER_CAT: "Universe Breach Detected"
+ BREACHSEALER_CAT_DESC: "The dim Seddom system houses a tear in the fabric of the universe. Even more unusual, the tear itself is gradually shrinking, as if something or someone is working to repair it."
+ anomaly.7200.name: "Closing Aperture"
+ anomaly.7200.desc: "Seddom is an eerie spectacle. The swirling planets are wreathed in darkness; nearby is a breach in the very fabric of our universe, a cosmic maw that devours the very radiance of the system's star.\n\nDespite the seemingly natural arrangement of planetoids, further analysis has revealed that they are arranged with mathematical precision. Millennia ago, some incredible force orchestrated the orbital bodies of this system into a specialized pattern, one which has not only mitigated the effects of the tear, but prevented it from spreading into the wider galaxy.\n\nWe arrive here at an auspicious moment - a monumental work nears completion. This system's restoration is imminent."
+ anomaly.7200.a: "Thank you for fixing our galaxy."
