--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -43,8 +43,8 @@
  origin_tooltip_life_seeded_effects: "- $HOMEWORLD$ ['concept_pc_gaia'] (ขนาด: £planetsize£ 30) มี §Iคุณสมบัติของดาวเคราะห์ที่หายาก§!$NEW_LINE$- $SPECIES_TRAITS$ ['concept_gaia_preference']"
  origin_tooltip_life_seeded_negative_effects: "- $NO_GUARANTEED_WORLDS$"
  origin_post_apocalyptic:0 "$civic_post_apocalyptic$"
- origin_life_seeded_habinte: "$origin_life_seeded$"
- origin_life_seeded_habinte_desc: "$origin_life_seeded_desc$"
+ origin_life_seeded_ai_only: "$origin_life_seeded$"
+ origin_life_seeded_ai_only_desc: "$origin_life_seeded_desc$"
  origin_post_apocalyptic_desc:1 "Baptized by nuclear fire, this civilization has faced total annihilation - and survived. Devastated yet unbroken, they have rebuilt civilization from the ashes of their old world."
  origin_tooltip_post_apocalyptic_effects: "- $HOMEWORLD$ ['concept_pc_nuked']$NEW_LINE$- $SPECIES_TRAITS$ ['concept_survivor']"
  origin_shattered_ring:0 "วงแหวนที่แตกหัก"
@@ -214,6 +214,8 @@
  IS_NOT_VOTING_RESOLUTION:0 "The $GALACTIC_COMMUNITY$ is currently NOT voting on $RESOLUTION|Y$"
  IS_LAST_RESOLUTION_CHANGED:0 "The last resolution the $GALACTIC_COMMUNITY$ considered was $RESOLUTION|Y$"
  IS_NOT_LAST_RESOLUTION_CHANGED:0 "The last resolution the $GALACTIC_COMMUNITY$ considered was NOT $RESOLUTION|Y$"
+ IS_LAST_RESOLUTION_CATEGORY_CHANGED: "The category of the last resolution the $GALACTIC_COMMUNITY$ considered was $CATEGORY|Y$"
+ IS_NOT_LAST_RESOLUTION_CATEGORY_CHANGED: "The category of the last resolution the $GALACTIC_COMMUNITY$ considered was NOT $CATEGORY|Y$"
  IS_POSITION_ON_CURRENT_RESOLUTION:0 "Position on the current $GALACTIC_COMMUNITY$ resolution is $POSITION|Y$"
  IS_NOT_POSITION_ON_CURRENT_RESOLUTION:0 "Position on the current $GALACTIC_COMMUNITY$ resolution is NOT $POSITION|Y$"
  IS_POSITION_ON_LAST_RESOLUTION:0 "Position on the last $GALACTIC_COMMUNITY$ resolution was $POSITION|Y$"
@@ -1106,7 +1108,7 @@
  resolution_greatergood_balance_in_the_middle_tooltip:0 "มาตรฐานความเป็นอยู่: §Yพื้นฐานการยังชีพ§!, §Yเศรษฐกิจแบบแบ่งชนชั้น§!, §Yเงื่อนไขที่เหมาะสม§!, และ §Yสิทธิพิเศษสำหรับนักวิชาการ§! ถูก §Rแบน§!\n\n§Yทาส§! ทุกประเภทถูก §Rแบน§!"
  resolution_greatergood_universal_prosperity_mandate:0 "ความมั่งคั่งของจักรวาล"
  resolution_greatergood_universal_prosperity_mandate_desc:0 "If our galaxy spanning civilizations cannot provide for all of our people, then we have failed them. There is no excuse for anyone in the galaxy to want for anything. We should additionally act to redistribute excess wealth for the betterment of all."
- resolution_greatergood_universal_prosperity_mandate_tooltip:0 "มาตรฐานความเป็นอยู่ทั้งหมดนอกเหนือจาก: §Yภาระร่วมกัน§!, §Yความอุดมสมบูรณ์ของชาวยูโทเปีย§!, §Yสารเคมีแห่งความสุข§!, หรือ §Yเอาใจผู้รับคำสั่ง§! จะถูก §Rแบน§!\n\n§Yการเปลี่ยน§! สิ่งมีชีวิตเป็นจักรวรรดิที่มีคุณสมบัติพลเมือง §Yเครื่องดัดแปลงประชากร§! หรือ §Yจิตสำนึกร่วม§! จะถูก §Rแบน§!\n\nจักรวรรดิที่ไม่มีจริยธรรม §Yความเสมอภาค§! หรือ §Yเครื่องจักรรับใช้§! อาจไม่สามารถทำตามข้อกำหนดนี้ได้และจะถือเป็นการ §Rละเมิดกฎหมายกาแล็กติก§!!"
+ resolution_greatergood_universal_prosperity_mandate_tooltip:1 "มาตรฐานความเป็นอยู่ทั้งหมดนอกเหนือจาก: §Yภาระร่วมกัน§!, §Yกรรมสิทธิ์ของของพนักงาน§!, §Yความอุดมสมบูรณ์ของชาวยูโทเปีย§!, §Yสารเคมีแห่งความสุข§!, หรือ §Yเอาใจผู้รับคำสั่ง§! จะถูก §Rแบน§!\n\n§Yการเปลี่ยน§! สิ่งมีชีวิตเป็นจักรวรรดิที่มีคุณสมบัติพลเมือง §Yเครื่องดัดแปลงประชากร§! หรือ §Yจิตสำนึกร่วม§! จะถูก §Rแบน§!\n\nจักรวรรดิที่ไม่มีจริยธรรม §Yความเสมอภาค§! หรือ §Yเครื่องจักรรับใช้§! อาจไม่สามารถทำตามข้อกำหนดนี้ได้และจะถือเป็นการ §Rละเมิดกฎหมายกาแล็กติก§!!"
  resolution_category_mutualdefense:0 "การป้องกันซึ่งกันและกัน"
  resolution_mutualdefense_repeal_1:0 "§Rยกเลิก $resolution_mutualdefense_the_readied_shield$§!"
  resolution_mutualdefense_repeal_1_desc:0 "Federations and Defensive Pacts are where military matters should be discussed, not on the Senate Floor."
@@ -1346,13 +1348,13 @@
  resolution_galactic_threats_committee_desc:0 "Who knows what threats lurk just out of sensor range? Creating a committee dedicated to the study of galactic level threats will prepare us for anything."
  resolution_galactic_threats_committee_modifier_desc:0 "Damage to Endgame Crisis factions: §G+20%§!\n§R+10%§! Researchers upkeep.\n§RDangerous experiments might have dangerous results.§!"
  resolution_community_champions_repeal:1 "ยกเลิก $resolution_community_champions$"
- resolution_community_champions_repeal_desc:1 "Repeals the §Y$resolution_community_champions$§! resolution."
+ resolution_community_champions_repeal_desc:1 "ยกเลิกมติ §Y$resolution_community_champions$§!"
  resolution_constitutional_immunity_repeal:0 "ยกเลิก $resolution_constitutional_immunity$"
  resolution_constitutional_immunity_repeal_desc:0 "ยกเลิกมติ §Y$resolution_constitutional_immunity$§! ทำให้จักรวรรดินี้อาจจบลงด้วยการละเมิดกฎหมายกาแล็กติกอีกครั้ง"
  resolution_development_aides_repeal:1 "ยกเลิก $resolution_development_aides$"
- resolution_development_aides_repeal_desc:1 "Repeals the §Y$resolution_development_aides$§! resolution."
+ resolution_development_aides_repeal_desc:1 "ยกเลิกมติ §Y$resolution_development_aides$§!"
  resolution_galactic_threats_committee_repeal:1 "ยกเลิก $resolution_galactic_threats_commitee$"
- resolution_galactic_threats_committee_repeal_desc:1 "Repeals the §Y$resolution_galactic_threats_commitee$§! resolution."
+ resolution_galactic_threats_committee_repeal_desc:1 "ยกเลิกมติ §Y$resolution_galactic_threats_commitee$§!"
  community_champion_counselor:0 "$resolution_community_champions$"
  community_champion_custodian:0 "$resolution_community_champions$"
  community_champion_emperor:0 "$resolution_community_champions$"
@@ -1596,7 +1598,7 @@
  NUM_ENVOYS_VALUE:0 "จำนวนนักการทูต: $VALUE|Y$"
  FROM_COUNCIL_VALUE:0 "จากการประชุมสภา: $VALUE|Y$"
  MISSING_DIPLOMACY_HEAD: "Missing Minister of State"
- IMPROVE_RELATIONS_VALUE:1 "Improve Relations: $VALUE|+=2$ ($INCREASE|2$ per month)"
+ IMPROVE_RELATIONS_VALUE:1 "ปรับปรุงความสัมพันธ์: $VALUE|+=2$ ($INCREASE|2$ ต่อเดือน)"
  HARM_RELATIONS_VALUE:1 "Harm Relations: $VALUE|+=2$ ($DECREASE|2$ per month)"
  RELATION_LEVELS:0 "§Hระดับความสัมพันธ์§!"
  RELATION_LEVEL_VALUE:0 "$LEVEL$ ($LOWER|+0$ ถึง $UPPER|+0$)"
@@ -2571,7 +2573,7 @@
  origin.210.general:0 "A [scion_master.GetSpeciesName] §HGeneral§! joins the [Root.GetName]."
  scion_leader_desc: "A venerated guest from an ancient and dormant empire, this restless polymath seeks new challenges in the developing galaxy."
  scion_leader_catch_phrase: "§L"My, what a fascinating and rustic milieu. Come along then, galaxy. Inspire me."§!"
- leader_trait_ancient_knowledge: "Ancient Knowledge"
+ leader_trait_ancient_knowledge: "ความรู้โบราณ"
  leader_trait_ancient_knowledge_desc: "This leader wields insights gathered centuries before many civilizations could even begin to comprehend space."
  origin.215.desc:0 "[Root.GetSpeciesNamePlural], we recently discovered several surplus starships that we have no use of. We were about to chuck them into the nearest sun, but then we thought of you, our dear scions.\n\nThese are old ships - some are no doubt older than your entire civilization - but you should find them quite potent. Please take them. We insist."
  origin.215.a:0 "Thank you."
