--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -1531,8 +1531,22 @@
  FE_VICTORY_TOOLTIP:1 "§H$FE_VICTORY$§!\nสิ่งนี้ควบคุมว่าเกมจะจบลงในปีใด หากไม่มี ['concept_endgame_crisis'] หรือ ['concept_war_in_heaven'] จักรวรรดิที่มี §Iคะแนน§! สูงสุดจะได้รับการประกาศให้เป็นผู้ชนะ แต่เราสามารถเล่นต่อไปได้อีก\n\nการตั้งค่าแถบเลื่อนนี้ให้เป็นค่าสูงสุดจะปิดใช้งานชัยชนะแบบกำหนดเวลาจบ(เล่นต่อไปได้เรื่อยๆโดยไม่มีการจบเกม)"
  FE_END_GAME:0 "จบ-เกมเริ่มในปี"
  FE_END_GAME_TOOLTIP:1 "§H$FE_END_GAME$§!\nสิ่งนี้ควบคุมซึ่งเป็นปีแรกสุดที่จะเกิดเหตุการณ์จบเกม เช่น ['concept_endgame_crises'] และ ['concept_fallen_empire_awakening'] สามารถเกิดขึ้นได้"
- FE_TECH_SPEED:2 "ค่าใช้จ่ายด้านเทคโนโลยีและวัฒนธรรม"
- FE_TECH_SPEED_TOOLTIP:2 "§H$FE_TECH_SPEED$§!\nสิ่งนี้จะควบคุมความเร็วของ ['concept_technologies'] และ ['concept_traditions'] ของจักรวรรดิทั่วไป"
+ FE_TECH_SPEED:3 "ค่าใช้จ่ายด้านเทคโนโลยี"
+ FE_TECH_SPEED_TOOLTIP:3 "§H$FE_TECH_SPEED$§!\nสิ่งนี้จะควบคุมความเร็วในการได้รับ['concept_technologies']ของจักรวรรดิทั่วไป"
+ FE_TECH_SPEED_DIFFICULTY_SCALE: "ปรับความยากของค่าใช้จ่ายด้านเทคโนโลยี"
+ FE_TECH_SPEED_DIFFICULTY_SCALE_TOOLTIP: "§H$FE_TECH_SPEED_DIFFICULTY_SCALE$§!\nสิ่งนี้จะควบคุมว่าความยากในการเลือกวิจัยที่ส่งผลต่อค่าใช้จ่ายในการวิจัย['concept_technologies'] สิ่งนี้มีผลกระทบมากขึ้นต่อเทคโนโลยีขั้นสูง\n\nการเพิ่มสิ่งนี้จะทำให้เกมยากขึ้น โดยเฉพาะอย่างยิ่งในระดับความยากที่สูงขึ้น"
+ DIFF_TECH_SCALING_OFF: "ปิด"
+ DIFF_TECH_SCALING_LOW: "ต่ำ"
+ DIFF_TECH_SCALING_NORMAL: "ปกติ"
+ DIFF_TECH_SCALING_HIGH: "สูง"
+ DIFF_TECH_SCALING_EXTREME: "สุดขีด"
+ DIFF_TECH_SCALING_OFF_TOOLTIP: "§H$DIFF_TECH_SCALING_OFF$§!\nความยากของเกมไม่ส่งผลต่อค่าใช้จ่ายของ['concept_technology']"
+ DIFF_TECH_SCALING_LOW_TOOLTIP: "§H$DIFF_TECH_SCALING_LOW$§!\nความยากที่เพิ่มขึ้นมีผลกระทบเล็กน้อยต่อค่าใช้จ่ายของ['concept_technology'] เทคโนโลยีระดับ Tier สูงกว่าจะเพิ่มขึ้นมากกว่าเทคโนโลยีระดับ Tier ที่ต่ำกว่า"
+ DIFF_TECH_SCALING_NORMAL_TOOLTIP: "§H$DIFF_TECH_SCALING_NORMAL$§!\nความยากที่เพิ่มขึ้นมีผลกระทบปานกลางต่อค่าใช้จ่ายของ['concept_technology'] เทคโนโลยีระดับ Tier สูงกว่าจะเพิ่มขึ้นมากกว่าเทคโนโลยีระดับ Tier ที่ต่ำกว่า"
+ DIFF_TECH_SCALING_HIGH_TOOLTIP: "§H$DIFF_TECH_SCALING_HIGH$§!\nความยากที่เพิ่มขึ้นมีผลกระทบอย่างมากต่อค่าใช้จ่ายของ['concept_technology'] เทคโนโลยีระดับ Tier สูงกว่าจะเพิ่มขึ้นมากกว่าเทคโนโลยีระดับ Tier ที่ต่ำกว่า"
+ DIFF_TECH_SCALING_EXTREME_TOOLTIP: "§H$DIFF_TECH_SCALING_EXTREME$§!\nความยากที่เพิ่มขึ้นมีผลกระทบสูงสุดต่อค่าใช้จ่ายของ['concept_technology'] เทคโนโลยีระดับ Tier สูงกว่าจะเพิ่มขึ้นมากกว่าเทคโนโลยีระดับ Tier ที่ต่ำกว่า\n\n§Rคำเตือน:§! ที่การตั้งค่าความยากสูง อาจเอาชนะคู่ต่อสู้ได้ยากหรือเป็นไปไม่ได้เลยในช่วงท้ายเกม"
+ FE_TRADITION_SPEED: "ค่าใช้จ่ายด้านวัฒนธรรม"
+ FE_TRADITION_SPEED_TOOLTIP: "§H$FE_TRADITION_SPEED$§!\nสิ่งนี้จะควบคุมความเร็วในการได้รับ['concept_traditions']ของจักรวรรดิทั่วไป"
  FE_CRISES:1 "ความแข็งแกร่งของไครซิส"
  FE_CRISES_TOOLTIP:4 "§Kความแข็งแกร่งของไครซิส§!\nสิ่งนี้ควบคุมความแข็งแกร่งของกองยานของ['concept_endgame_crises'] ยิ่งตัวคูณสูงเท่าไร ไครซิสตอนจบเกมก็จะยิ่งอันตรายมากขึ้นเท่านั้น\n\nถ้าหากตั้งค่า §Iประเภทของไครซิส§! เป็น §Iทั้งหมด§!, ค่านี้จะถูกคูณด้วย 2 เมื่อไครซิสรอดจากการถูกทำลายในแต่ละครั้ง"
  FE_PRIMITIVE_WORLDS:1 "อารยธรรมดึกดำบรรพ์ (Pre-FTL) และเผ่าพันธุ์พรี-เซเปียนส์"
@@ -5494,7 +5508,6 @@
  LEADER_BACKGROUND_ETHIC:0 "จริยธรรม: $ETHIC|H$"
  COUNCIL_DYNAMIC_BACKGROUND:0 "[Root.GetScriptedCouncilBackground]"
  LEADER_RECRUITMENT_SCRIPTED_GREETING:1 "§L[Root.GetScriptedLeaderRecruitedGreeting]§!"
- LEADER_PORTRAIT_BACKGROUND:0 "[Root.GetScriptedLeaderPortraitBackground]"
  COUNCIL_AGENDA_DESC_SUFFIX:0 "[Root.GetScriptedCouncilAgendaDescSuffix]"
  COMPONENT_SET_MULTIPLE_SIZES:0 "Hover over size icon to see detailed info"
  PRODUCTION_COST:0 "การผลิต"
@@ -5616,11 +5629,11 @@
  SHIP_STAT_DESC_power:1 "§Eจำเป็นต้องใช้ §Hพลังงาน§! จำนวนเพียงพอเพื่อใช้งานระบบต่างๆของยานทำงาน สามารถเพิ่มพลังงานโดยการเพิ่มเครื่องปฏิกรณ์ให้เพียงพอกับการกินพลังงานของส่วนประกอบต่างๆของยาน การออกแบบยานที่มีค่า §Hพลังงาน§! ติดลบ(ขาดพลังงาน) จะไม่สามารถเซฟได้§!"
  SHIP_STAT_DESC_hitpoints:1 "§E§HHP§! ของยานที่กำหนดว่าจะต้องรับความเสียหายเท่าใดก่อนที่ตัวยานจะถูกทำลาย§!"
  SHIP_STAT_DESC_armor:2 "§E§Hเกราะ§! ทำหน้าที่เป็นแนวป้องกันที่สอง โดยดูดซับความเสียหายที่เข้ามาก่อนที่จะสร้างความเสียหายให้กับตัวยาน การซ่อมเกราะจะต้องทำที่ §Hฐานอวกาศ§! เว้นแต่ว่ายานจะติดตั้งส่วนประกอบเกราะพิเศษที่สามารถสร้างเกราะใหม่ขึ้นมาแทนที่§!"
- SHIP_STAT_DESC_shields:1 "§E§Hโล่พลังงาน§! ทำหน้าที่เป็นแนวป้องกันแนวแรก โดยดูดซับความเสียหายที่เข้ามาก่อนที่จะปะทะกับเกราะและตัวยาน อาวุธบางชนิดอาจสร้างความเสียหายเพิ่มเติมให้กับโล่พลังงานหรือทะลุทะลวงโล่พลังงานทั้งหมดก็ได้ เป็นที่รู้กันว่าพัลซาร์ทำให้โล่พลังงานใช้งานไม่ได้ โล่พลังงานจะค่อยๆสร้างขึ้นใหม่เมื่อไม่ได้ต่อสู้§!"
- SHIP_STAT_DESC_evasion:1 "§EAll ships can evade attacks, avoiding any damage that would have been dealt. The §HEvasion§! chance can be increased by thrusters and other components, but larger ships benefit less.§!"
- SHIP_STAT_DESC_combat_speed:0 "§EThe §HSpeed§! of the ship decides how quick it maneuvers when not using FTL-travel, and is increased by the Thruster-component equipped. When moving in a fleet the slowest ship will limit the maximum speed.§!"
+ SHIP_STAT_DESC_shields:1 "§E§Hโล่พลังงาน§! ทำหน้าที่เป็นแนวป้องกันแรก โดยดูดซับความเสียหายที่เข้ามาก่อนที่จะปะทะกับเกราะและตัวยาน อาวุธบางชนิดอาจสร้างความเสียหายเพิ่มเติมให้กับโล่พลังงานหรือทะลุทะลวงโล่พลังงานทั้งหมดก็ได้ เป็นที่รู้กันว่าพัลซาร์ทำให้โล่พลังงานใช้งานไม่ได้ โล่พลังงานจะค่อยๆสร้างขึ้นใหม่เมื่อไม่ได้ต่อสู้§!"
+ SHIP_STAT_DESC_evasion:1 "§Eยานทุกลำสามารถหลบเลี่ยงการโจมตีได้ โดยหลีกเลี่ยงความเสียหายที่อาจเกิดขึ้นได้ โอกาส §Hหลบหลีก§! สามารถเพิ่มได้ด้วยตัวขับดัน(ทรัสเตอร์)และชิ้นส่วนอื่นๆ แต่ยานรบขนาดใหญ่จะได้รับประโยชน์นี้น้อยกว่า§!"
+ SHIP_STAT_DESC_combat_speed:0 "§E§Hความเร็ว§! คือความเร็วการเคลื่อนที่ของยานแบบปกติที่ไม่ใช่การเดินทางที่เร็วกว่าแสง (FTL) และจะเพิ่มขึ้นตามชิ้นส่วนทรัสเตอร์(ตัวขับดัน)ที่ติดตั้งในยาน เมื่อเคลื่อนที่ในกองยาน ยานลำที่ช้าที่สุดจะจำกัดความเร็วสูงสุดของกองยาน§!"
  SHIP_STAT_DESC_speed:0 "$SHIP_STAT_DESC_combat_speed$"
- SHIP_STAT_DESC_damage:1 "§EThe total damage done by the ship is a summation of the damage of all weapon components equipped. Each weapon will still attack individually during combat. See individual components for detailed information such as attack speed, damage and effective range as well as §HArmor§! and §HShield§! penetration.§!"
+ SHIP_STAT_DESC_damage:1 "§Eค่าความเสียหายรวมที่ทำโดยยานคือผลรวมของดาเมจของอาวุธทั้งหมดที่ติดตั้ง อาวุธแต่ละชิ้นจะโจมตีแยกกันในระหว่างการสู้รบ ดูส่วนประกอบแต่ละส่วนสำหรับข้อมูลโดยละเอียด เช่น ความเร็วการโจมตี ความพลังโจมตี และระยะโจมตีที่มีประสิทธิภาพ ตลอดจนการเจาะ §Hเกราะ§! และ §Hโล่พลังงาน§!§!"
  SCIENCE_SHIP_DESC:0 "ยานวิจัยวิทยาศาสตร์ ( สแกนเนอร์: $LEVEL|Y$, ความเร็ว: §H$SPEED|Y1$x§! )"
  REDESIGN_CURRENT:0 "Redesign Current $CLASS|Y$"
  SHIP_DESIGN_SENSOR_RANGE_DESC:0 "ระยะของเซ็นเซอร์: $VALUE|Y2$"
@@ -7294,6 +7307,7 @@
  ACTION_FORM_FEDERATION_OFFER_DESC:0 "§H[Actor.GetName]§! จะก่อตั้งสหพันธ์กับเรา"
  ACTION_DECLARE_WAR_TITLE:0 "ประกาศสงคราม"
  ACTION_DECLARE_WAR_DESC:0 "ประกาศสงครามกับ §H[Recipient.GetName]§!"
+ ACTION_DECLARE_WAR_OVERLORD_WILL_CLOSE_BRANCH_OFFICE_PLANET_DESC: "$ACTION_DECLARE_WAR_DESC$\n§RThis will close all of our Branch Offices on their planets.§!"
  ACTION_DECLARE_WAR_LONG_DESC:0 "§H[Actor.GetName]§! ต้องการจะประกาศสงครามกับ §H[Recipient.GetName]§!!"
  WILL_VOTE_YES_WAR_GOAL_HUMAN:0 "This Empire is controlled by a player, who can vote either way"
  WILL_VOTE_YES:0 "จะโหวตเห็นชอบ"
@@ -7987,6 +8001,10 @@
  building_bio_reactor_desc:0 "A facility where organic matter is converted into energy at a highly efficient rate."
  tech_bio_reactor:0 "$building_bio_reactor$"
  tech_bio_reactor_desc:0 "$building_bio_reactor_desc$"
+ building_bio_reactor_2: "เครื่องกำเนิดพลังงานชีวภาพขั้นสูง"
+ building_bio_reactor_2_desc: "A facility where organic matter is converted into energy at a highly efficient rate, improvements in waste collection allows harvesting of useful gaseous by-products."
+ tech_bio_reactor_2: "$building_bio_reactor_2$"
+ tech_bio_reactor_2_desc: "$building_bio_reactor_2_desc$"
  building_hab_stronghold:0 "โซนปลอดภัย"
  building_hab_stronghold_desc:0 "This section of the Habitat is dedicated to security and provides an armed security force to protect the Habitat from threats within and without."
  building_crude_huts:0 "กระท่อมหยาบๆ"
@@ -8764,7 +8782,7 @@
  civic_tooltip_agrarian_idyll_effects:8 "$civic_tooltip_agrarian_idyll_start$£job_farmer£ §Y$job_farmer_plural$§! ยังผลิต §G2§! £amenities£ §Yความอยู่ดีกินดี§!"
  civic_tooltip_agrarian_anglers_effects:0 "$civic_tooltip_agrarian_idyll_start$£job_farmer£ §Y$job_farmer_plural$§!, £job_angler£ §Y$job_angler_plural$§! และ £job_pearl_diver£ §Y$job_pearl_diver_plural$§! ยังผลิต §G2§! £amenities£ §Yความอยู่ดีกินดี§!"
  civic_tooltip_mechanists_effects:10 "- เริ่มต้นด้วยประชากรหุ่นยนต์ £pop£ 8 และด้วยเทคโนโลยีกับโครงสร้างพื้นฐานเพื่อสร้างเพิ่ม\n- $mod_planet_pops_robotics_upkeep_mult$: §G-5%§!\n"
- civic_tooltip_shared_burden_effects:5 "- มีมาตรฐานความเป็นอยู่แบบ §Y$living_standard_shared_burden$§! ที่จะส่งผลให้ £pop£ ประชากรทั้งหมดมีการบำรุงรักษาที่เป็น £consumer_goods£ §Y$consumer_goods$§! ในระดับปานกลางโดยไม่คำนึงถึง §Yชนชั้น§!\n- ไม่สามารถใช้งาน §Yมาตรฐานความเป็นอยู่§! แบบอื่นๆเป็นส่วนใหญ่ได้\n- สามารถถือครองสิ่งปลูกสร้าง £building£ §Y$holding_communal_housing_outreach$§! ได้\n- ได้รับ £unity£ §Yเอกภาพ§! จากกลุ่มการเมืองความเสมอภาคเพิ่มเป็น 2 เท่า\n"
+ civic_tooltip_shared_burden_effects:6 "- มีมาตรฐานความเป็นอยู่แบบ §Y$living_standard_shared_burden$§! ที่จะส่งผลให้ £pop£ ประชากรทั้งหมดมีการบำรุงรักษาที่เป็น £consumer_goods£ §Y$consumer_goods$§! ในระดับปานกลางโดยไม่คำนึงถึง §Yชนชั้น§!\n- ไม่สามารถใช้งาน §Yมาตรฐานความเป็นอยู่§! แบบอื่นๆเป็นส่วนใหญ่ได้\n- สามารถถือครองสิ่งปลูกสร้าง £building£ §Y$holding_communal_housing_outreach$§! ได้"
  civic_tooltip_fanatic_purifiers_effects:14 "- ไม่สามารถมีส่วนร่วมใน §Yการทูต§! กับเผ่าพันธุ์อื่น!\n- ไม่สามารถเข้าถึง §Yตลาดกาแล็กติก§! ได้\n- มีข้ออ้าง §Y'การชำระล้าง'§! เพื่อทำสงครามกับเผ่าพันธุ์อื่น\n- §Yประชากรต่างดาว§! จะถูกกำจัด\n- ได้รับ £unity£ §Yเอกภาพ§! จากการกำจัด £pop£ ประชากรต่างดาว\n- อาจใช้การทิ้งระเบิดแบบ §Y$bombardment_armageddon$§!\n"
  civic_tooltip_devouring_swarm_effects:11 "- ไม่สามารถมีส่วนร่วมใน §Yการทูต§! กับจักรวรรดิอื่น!\n- ไม่สามารถเข้าถึง §Yตลาดกาแล็กติก§! ได้\n- มีข้ออ้าง §Y'ผู้หิวโหย'§! เพื่อทำสงครามกับจักรวรรดิอื่น\n- §Yประชากรต่างดาว§! จะถูกกิน\n- ได้รับ £society£ §Y$society_research$§! จากการกิน £pop£ ประชากรต่างดาว\n"
  civic_tooltip_devouring_swarm_lithoid_effects:2 "Cannot engage in §YDiplomacy§! with other empires!\nCannot access the §YGalactic Market§!\nCannot §YTerraform§! planets\nHas the §Y'Hunger'§! casus belli on all other empires\nHas the §Y'Consume World'§! planetary decision\n§YXeno Pops§! will always be eaten\nGains £society£ §Y$society_research$§! from eating Xeno £pop£ Pops"
@@ -10182,7 +10200,7 @@
  pre_sapients_allow_desc:3 "Intelligent animals are still just animals. They can safely be ignored.\n\n§EPre-sapients can be selectively purged.§!"
  pre_sapients_protect:0 "ได้รับการปกป้อง"
  pre_sapients_protect_name:0 "ปกป้องอารยธรรมก่อนเซเปียนส์"
- pre_sapients_protect_desc:3 "Though still only simple animals, these beings are no less than what we ourselves once were. We should ensure their preservation.\n\n§EPre-sapients cannot be selectively purged, and planets containing pre-sapients cannot be terraformed.\n\nAlien Zoos may be constructed on planets with pre-sapients.§!\n\n§RChanging away from this policy will remove any Alien Zoos on planets without an $d_alien_pets_deposit$ deposit§! or any livestock present."
+ pre_sapients_protect_desc:3 "Though still only simple animals, these beings are no less than what we ourselves once were. We should ensure their preservation.\n\n§EPre-sapients cannot be selectively purged, and planets containing pre-sapients cannot be terraformed.\n\nAlien Zoos may be constructed on planets with pre-sapients.§!\n\n§RChanging away from this policy will remove any Alien Zoos on planets without an $d_alien_pets_deposit$ deposit or any livestock present!§!"
  pre_sapients_purge:0 "ถูกกำจัด"
  pre_sapients_purge_name:3 "กวาดล้างอารยธรรมก่อนเซเปียนส์"
  pre_sapients_purge_desc:0 "All rights spring from the capacity for reason. An animal is just an animal, and an animal that stands in our way is just a pest.\n\n§EPre-sapients living on our planets will be purged§!"
@@ -10327,7 +10345,7 @@
  migration_allowed_all:0 "อพยพย้ายถิ่นได้อย่างอิสระ"
  migration_allowed_all_name:0 "ย้ายถิ่นฐานแบบไม่จำกัด"
  migration_allowed_all_desc:0 "All our citizens must be free to seek their own happiness wherever they so desire.\n\n§EAll Pops can freely migrate§!"
- policy_appropriation:0 "การจัดสรรที่ดิน"
+ policy_appropriation:0 "การจัดสรรที่ดินให้"
  policy_appropriation_desc:0 "This policy controls whether or not newly acquired planets should have some of their land appropriated from non-citizen species."
  appropriation_not_allowed:0 "ไม่อนุญาต"
  appropriation_not_allowed_name:0 "ห้ามจัดสรรที่ดิน"
@@ -10748,7 +10766,7 @@
  feature_gateway_construction:0 "การก่อสร้างเกตเวย์"
  feature_gateway_construction_desc:0 "Allows us to rebuild and construct new Gateways."
  feature_unity_ambitions:0 "ความปรารถนาอันแรงกล้า"
- feature_unity_ambitions_desc:0 "ปลดล็อกเซ็ตของ §Yประกาศคำสั่ง§! ที่เรียกว่า 'ความปรารถนาอันแรงกล้า' พวกมันแตกต่างจากประกาศคำสั่งทั่วไปในแง่ที่ว่ามีค่าใช้จ่าย £unity£ §Yเอกภาพ§! ที่ใช้ปลดล็อกวัฒนธรรมของคุณ การใช้ความปรารถนา(อันแรงกล้า)จะไม่เพิ่มค่าใช้จ่าย £unity£ §Yเอกภาพ§! สำหรับวัฒนธรรมหรือความปรารถนา"
+ feature_unity_ambitions_desc:0 "ปลดล็อกเซ็ต(ชุด) §Yประกาศคำสั่ง§! ที่เรียกว่า 'ความปรารถนาอันแรงกล้า'"
  feature_campaign_edicts:0 "เพิ่มประกาศคำสั่ง (การรณรงค์)"
  feature_campaign_edicts_desc:2 "Unlocks additional edicts called §YCampaigns§! that cost Energy instead of Unity."
  feature_jump_method:0 "การเดินทางแบบกระโดดข้าม (จั้มไดร์ฟ)"
@@ -12014,6 +12032,7 @@
  resolution_custodian_galactic_mobilization_gestalt:0 "$resolution_custodian_galactic_mobilization$"
  mod_country_resource_max_sr_dark_matter_add:0 "Dark Matter Storage Capacity"
  mod_megastructures_cost_mult: "Megastructure Build Cost"
+ mod_megastructures_gateways_cost_mult: "ค่าก่อสร้างเกตเวย์"
  mod_megastructures_habitat_cost_mult:0 "ค่าใช้จ่ายในการสร้างที่อยู่อาศัยในอวกาศ"
  mod_megastructures_habitat_alloys_upkeep_mult: "ที่อยู่อาศัยในอวกาศมีค่าบำรุงรักษาที่เป็น £alloys£ โลหะผสม"
  mod_planet_districts_hab_alloys_upkeep_mult: "เขตต่างๆของที่อยู่อาศัยในอวกาศมีค่าบำรุงรักษาที่เป็น £alloys£ โลหะผสม"
@@ -12163,8 +12182,8 @@
  ASSIGN_REPRESENTATIVE_DELAYED: "§EAssign a Representative to $FEDERATION$ to increase its §!§HCohesion§!"
  FEDERATION_ASSIGNED_LEADERS: "ผู้แทนถูกแต่งตั้งในสหพันธ์: $VALUE|2+=$"
  FEDERATION_COUNTRY_REPRESENTATIVE: "	$COUNTRY$: $EFFECT|Y0$"
- MOD_VERSION:0 "Mod v0.71.6, Update 21/01/2024"
- MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - Astral Thread -> เส้นใยแอสทรอล / เส้นใยมิติ (ทรัพยากรใหม่)\n - Astral Rift -> รอยแยกมิติ\n - Rift Sphere -> ทรงกลมริฟ\n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
+ MOD_VERSION:0 "Mod v0.72.0, Update 02/03/2024"
+ MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - n/a \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
  MOD_TEST2DUMMY2:0 "dummy2"
