--- a/mod/thmod/localisation/english/leaders_l_english.yml
+++ b/mod/thmod/localisation/english/leaders_l_english.yml
@@ -134,9 +134,9 @@
  leader_trait_collective_wisdom_2:0 "$leader_trait_collective_wisdom$ II"
  leader_trait_collective_wisdom_2_desc:0 "$leader_trait_collective_wisdom_desc$"
  leader_trait_collective_wisdom_2_effect:1 "+20 £society£ §Y$society_research$§! while excavating a site."
- leader_trait_observant:1 "Observer"
+ leader_trait_observant:1 "ผู้สังเกตการณ์"
  leader_trait_observant_desc:2 "A set of self-built, powerful scanners allow this leader to see further and plan the journey ahead."
- leader_trait_observant_hive:1 "Observer"
+ leader_trait_observant_hive:1 "ผู้สังเกตการณ์"
  leader_trait_observant_hive_desc:2 "$leader_trait_observant_desc$"
  leader_trait_observant_machine:0 "Deep Scan"
  leader_trait_observant_machine_desc:2 "$leader_trait_observant_desc$"
@@ -144,6 +144,11 @@
  leader_trait_observant_2_hive_desc:0 "$leader_trait_observant_hive_desc$"
  leader_trait_observant_2_machine:0 "$leader_trait_observant_machine$ II"
  leader_trait_observant_2_machine_desc:0 "$leader_trait_observant_machine_desc$"
+ leader_trait_resolution_category_focus_favor_intro: "$t$เมื่อคุณสนับสนุนมติที่ผ่านในหมวดนี้:\n$tt$"
+ leader_trait_resolution_category_focus_favor_outro: "โอกาสที่จะได้รับ 1 §Yบุญคุณ§! จากจักรวรรดิที่เสนอญัตติ:"
+ leader_trait_resolution_category_focus_1_favor_tt: "$leader_trait_resolution_category_focus_favor_intro$$leader_trait_resolution_category_focus_favor_outro$ §G+$@resolution_focus_amt_1|0$%§!"
+ leader_trait_resolution_category_focus_2_favor_tt: "$leader_trait_resolution_category_focus_favor_intro$$leader_trait_resolution_category_focus_favor_outro$ §G+$@resolution_focus_amt_2|0$%§!"
+ leader_trait_resolution_category_focus_3_favor_tt: "$leader_trait_resolution_category_focus_favor_intro$$leader_trait_resolution_category_focus_favor_outro$ §G+$@resolution_focus_amt_3|0$%§!"
  leader_trait_resolution_category_commerce_focus: "โฟกัส: กาแล็กติกคอมเมิร์ซ"
  leader_trait_resolution_category_commerce_focus_desc: "This delegate takes a special interest in all matters related to Galactic Commerce."
  leader_trait_resolution_category_industry_focus: "โฟกัส: การพัฒนาอุตสาหกรรม"
@@ -151,9 +156,9 @@
  leader_trait_resolution_category_politics_traditions_focus: "โฟกัส: วัฒนธรรมการเมือง"
  leader_trait_resolution_category_politics_traditions_focus_desc: "This delegate takes a special interest in all matters related to Politics Traditions."
  leader_trait_resolution_category_politics_traditions_focus_tt: "$GALCOM_EFFECTS_TXT$$TABBED_NEW_LINE$ความเข้มแข็งในการลงมติในญัตติ §Yวัฒนธรรมการเมือง§!:"
- leader_trait_resolution_category_politics_traditions_focus_1_tt: "$leader_trait_resolution_category_politics_traditions_focus_tt$ §G+5%§!"
- leader_trait_resolution_category_politics_traditions_focus_2_tt: "$leader_trait_resolution_category_politics_traditions_focus_tt$ §G+15%§!"
- leader_trait_resolution_category_politics_traditions_focus_3_tt: "$leader_trait_resolution_category_politics_traditions_focus_tt$ §G+25%§!"
+ leader_trait_resolution_category_politics_traditions_focus_1_tt: "$leader_trait_resolution_category_politics_traditions_focus_tt$ §G+5%§!\n$leader_trait_resolution_category_focus_1_favor_tt$"
+ leader_trait_resolution_category_politics_traditions_focus_2_tt: "$leader_trait_resolution_category_politics_traditions_focus_tt$ §G+15%§!\n$leader_trait_resolution_category_focus_2_favor_tt$"
+ leader_trait_resolution_category_politics_traditions_focus_3_tt: "$leader_trait_resolution_category_politics_traditions_focus_tt$ §G+25%§!\n$leader_trait_resolution_category_focus_3_favor_tt$"
  leader_trait_resolution_category_greatergood_focus: "โฟกัส: สิ่งที่ดีกว่า"
  leader_trait_resolution_category_greatergood_focus_desc: "This delegate takes a special interest in all matters related to The Greater Good."
  leader_trait_resolution_category_galacticreforms_focus: "โฟกัส: การปฏิรูปกาแล็กติก"
@@ -179,21 +184,22 @@
  leader_trait_resolution_category_sanctions_focus: "โฟกัส: บทลงโทษ"
  leader_trait_resolution_category_sanctions_focus_desc: "This delegate takes a special interest in all matters related to Galactic Sanctions."
  leader_trait_resolution_category_sanctions_focus_tt: "$GALCOM_EFFECTS_TXT$$TABBED_NEW_LINE$ความเข้มแข็งในการลงมติในญัตติ §Yบทลงโทษของกาแล็กติก§!:"
- leader_trait_resolution_category_sanctions_focus_1_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+5%§!"
- leader_trait_resolution_category_sanctions_focus_2_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+15%§!"
- leader_trait_resolution_category_sanctions_focus_3_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+25%§!"
+ leader_trait_resolution_category_sanctions_focus_1_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+5%§!\n$leader_trait_resolution_category_focus_1_favor_tt$"
+ leader_trait_resolution_category_sanctions_focus_2_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+15%§!\n$leader_trait_resolution_category_focus_2_favor_tt$"
+ leader_trait_resolution_category_sanctions_focus_3_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+25%§!\n$leader_trait_resolution_category_focus_3_favor_tt$"
  leader_trait_supporting_voter: "สนับสนุนซึ่งกันและกัน"
  leader_trait_supporting_voter_desc: "This leader is always eager to congratulate others for their success."
  leader_trait_supporting_voter_tt: "£diplo_weight£ §Y[GetGalCommunityOrGalImperium]§! §EEffects§!:$TABBED_NEW_LINE$Support for a passed Resolution grants 1 §YFavor§! and 5 §YTrust§! with the proposing empire"
  MESSAGE_SUPPORTING_VOTER: "Favor Gained"
  MESSAGE_FAVOR_SUPPORTING_VOTER_DESC: "Thanks to the skill of $LEADER$, we have managed to gain a Favor and 5 Trust with the $WHO|Y$."
+ MESSAGE_FAVOR_DELEGATE_FOCUS_DESC: "Thanks to the skill of $LEADER$, we have managed to gain a Favor with the $WHO|Y$."
  leader_trait_diplo_weight: "Gravitas"
  leader_trait_diplo_weight_desc: "There's a certain... something in the way this leader behaves that commands respect. When this delegate speaks, everyone stops to listen."
  leader_trait_federal_negotiator: "Camaraderie"
  leader_trait_federal_negotiator_desc: "This leader firmly believes in the uniting power of Federations. [Root.GetHisHer] dedication is an inspiration for us all."
  leader_trait_federal_greeter: "Greeter"
  leader_trait_federal_greeter_desc: "This delegate is quick to greet new Federation members and knows how to make them feel part of the group."
- leader_trait_federal_sweet_talker: "Peacemaker"
+ leader_trait_federal_sweet_talker: "ผู้สร้างสันติ"
  leader_trait_federal_sweet_talker_desc: "We may have different beliefs, but we share the same goal, the same Federation, the same dreams. Conflict only makes us weak."
  leader_trait_federal_joint_navy: "Joint Exercise"
  leader_trait_federal_joint_navy_desc: "Unity is strength. Sometimes, that strength is inside us. Sometimes, it just means having a bigger fleet."
