--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -155,7 +155,7 @@
  DIPLO_ACTION_LEAVE_ALLIANCE_DESC:0 "$COUNTRY|Y$ ออกจากพันธมิตร $ALLIANCE|Y$"
  DIPLO_ACTION_LEAVE_FEDERATION_DESC:0 "$COUNTRY|Y$ ออกจากสหพันธ์ $ALLIANCE|Y$"
  MESSAGE_DEMAND_SUBJUGATION_TITLE:1 "ต้องการให้เป็นบริวาร(เมืองขึ้น)"
- MESSAGE_ASK_TO_BECOME_SUBJUGATED_TITLE:1 "ความต้องการลังจากการพิชิต"
+ MESSAGE_ASK_TO_BECOME_SUBJUGATED_TITLE:1 "ต้องการเป็นเมืองขึ้นหรือบริวาร"
  MESSAGE_ASK_TO_BE_RELEASED_SUBJECT_TITLE:0 "คำขอให้ปลดปล่อยบริวาร"
  MESSAGE_FORM_FEDERATION_TITLE:0 "คำขอจัดตั้งสหพันธ์"
  MESSAGE_INVITE_TO_FEDERATION_TITLE:0 "คำเชิญของสหพันธ์"
