--- a/mod/thmod/localisation/english/modifiers_2_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_2_l_english.yml
@@ -43,7 +43,7 @@
  unproductive_without_experiments_desc:0 "The planet's $Society researchY$ output suffers as excellent opportunities for experimentation and clinical tests pass scientists by."
  massex_happy:0 "Future Faith"
  massex_happy_desc:0 "Your people are confident that a bright future lies ahead."
- stellar_salt:0 "Salty"
+ stellar_salt:0 "เกลือโบราณรสชาติดี"
  stellar_salt_desc:0 "A culinary renaissance sweeps across our Empire."
  projecting_moon:0 "Projecting Moon"
  projecting_moon_desc:0 "A powerful comms device capable of convincingly faking survey readings is active on this moon."
