--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -175,7 +175,8 @@
  mod_living_standard_trade_value_criminals_add: "£trade_value£ มูลค่าการค้าจาก $CRIMINALS$"
  mod_job_soldier_or_warrior_add: "[GetSoldierJobsAdd]"
  mod_job_soldier_stability_add:2 "เสถียรภาพจากงาน £job_soldier£ [GetSoldier]"
- mod_job_researcher_naval_cap_add: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$ from £job_researcher£ [GetResearcher] Jobs"
+ mod_job_researcher_naval_cap_add: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$ จาก £job_researcher£ งาน [GetResearcher]"
+ mod_job_preacher_trade_value_add: "£trade_value£ มูลค่าการค้าจาก £job_preacher£ $job_preacher_plural$"
  MOD_COUNTRY_COLONY_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในอาณานิคม"
  MOD_COUNTRY_CLAIM_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการอ้างสิทธิ์"
  MOD_COUNTRY_HOSTILE_CLAIM_INFLUENCE_COST_MULT:0 "อิทธิพลที่ศัตรูใช้ในการอ้างสิทธิ์"
@@ -331,6 +332,7 @@
  MOD_SHIP_REPAIR_ARMOR_MULT:0 "ความเร็วในการซ่อมเกราะของยานที่จอดเทียบท่า"
  MOD_SHIP_CLOAKING_STRENGTH_ADD:0 "พลังพรางตัว"
  MOD_SHIP_CLOAKING_DETECTION_ADD:0 "พลังตรวจจับ"
+ MOD_SHIP_MILITARY_SPEED_MULT: "ความเร็วเคลื่อนที่ของยานรบที่ต่ำกว่าแสง"
  MOD_OWNED_SHIP_SPEED_MULT:0 "$MOD_SHIP_SPEED_MULT$"
  MOD_OWNED_SHIP_EVASION_MULT:0 "$MOD_SHIP_EVASION_MULT$"
  MOD_OWNED_SHIP_FIRE_RATE_MULT:0 "$MOD_SHIP_FIRE_RATE_MULT$"
@@ -1184,7 +1186,7 @@
  opinion_subject_relation:0 "ความสัมพันธ์กับบริวาร"
  opinion_subject:0 "มีจักรวรรดิเจ้าเหนือหัวเดียวกัน"
  opinion_is_subject:0 "บริวาร"
- opinion_subject_protection:1 "Accepted Plea for Protection"
+ opinion_subject_protection:1 "ยอมรับคำร้องขอการปกป้องคุ้มครอง"
  opinion_forced_subjectized:0 "บังคับบริวาร"
  opinion_subject_broke_free:0 "หลุดพ้นจากจักรวรรดิเจ้าเหนือหัว"
  opinion_trade_gift:1 "Favorable Trade Deal"
@@ -1442,21 +1444,21 @@
  skill_ruler:1 "สกิลผู้ปกครอง"
  skill_admiral:1 "สกิลพลเรือเอก"
  skill_general:1 "สกิลพลเอก"
- skill_commander: "Commander Skill"
+ skill_commander: "สกิลผู้บัญชาการ"
  skill_scientist:1 "สกิลนักวิทยาศาสตร์"
  skill_governor:2 "สกิลผู้ว่าการ"
- skill_official: "Official Skill"
- skill_official_planet_governor: "Governor Skill"
- skill_scientist_planet_governor: "Governor Skill"
- skill_commander_planet_governor: "Governor Skill"
- skill_official_sector_governor: "Sector Governor Skill"
- skill_scientist_sector_governor: "Sector Governor Skill"
- skill_commander_sector_governor: "Sector Governor Skill"
- skill_official_background_planet_governor: "Governing Home Planet"
- skill_scientist_background_planet_governor: "Governing Home Planet"
- skill_commander_background_planet_governor: "Governing Home Planet"
- skill_commander_navy: "Commander Skill"
- skill_commander_army: "Commander Skill"
+ skill_official: "สกิลเจ้าหน้าที่"
+ skill_official_planet_governor: "สกิลผู้ว่าการ"
+ skill_scientist_planet_governor: "สกิลผู้ว่าการ"
+ skill_commander_planet_governor: "สกิลผู้ว่าการ"
+ skill_official_sector_governor: "สกิลผู้ว่าการเซ็กเตอร์"
+ skill_scientist_sector_governor: "สกิลผู้ว่าการเซ็กเตอร์"
+ skill_commander_sector_governor: "สกิลผู้ว่าการเซ็กเตอร์"
+ skill_official_background_planet_governor: "การปกครองดาวบ้านเกิด"
+ skill_scientist_background_planet_governor: "การปกครองดาวบ้านเกิด"
+ skill_commander_background_planet_governor: "การปกครองดาวบ้านเกิด"
+ skill_commander_navy: "สกิลผู้บัญชาการ"
+ skill_commander_army: "สกิลผู้บัญชาการ"
  skill_official_delegate_tt: "§Eผลเมื่อเป็นตัวแทนในสหพันธ์:§!$TABBED_NEW_LINE$- $MOD_FEDERATION_COHESION_ADD$: §G+1§!\n\n§Eผลเมื่อเป็นตัวแทนใน[global_event_country.GetGalCommunityOrGalImperium]:§!$TABBED_NEW_LINE$- $MOD_DIPLO_WEIGHT_MULT$: §G+10%§!"
  skill_official_planet_governor_tt: "-$w_basic_plural$ จากงาน: §G+$@planet_job_mult|0%$§!\n-$w_advanced_plural$ จากงาน: §G+$@planet_job_mult|0%$§!\n-$w_strategic_plural$ จากงาน: §G+$@planet_job_mult|0%$§!\n- $MOD_SPECIES_EMPIRE_SIZE_MULT$: §G$@planet_empire_size|0%$§!"
  skill_official_sector_governor_tt: "-$w_basic_plural$ จากงาน: §G+$@sector_job_mult|%$§!\n-$w_advanced_plural$ จากงาน: §G+$@sector_job_mult|%$§!\n-$w_strategic_plural$ จากงาน: §G+$@sector_job_mult|%$§!\n- $MOD_SPECIES_EMPIRE_SIZE_MULT$: §G$@sector_empire_size|0%$§!"
