--- a/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
@@ -430,3 +430,15 @@
  star_mall_drone_plural: "Star Mall Parking Drones"
  NAME_Star_Mall_Parking_Drones: "Star Mall Parking Services"
  NAME_Star_Mall_Parking_Services: "Star Mall Parking Services "
+ NAME_Seddom: "Seddom"
+ NAME_Ariph: "Ariph"
+ NAME_Hari_XXIV: "Hari XXIV"
+ NAME_Risasi: "Risasi"
+ NAME_Aridder: "Aridder"
+ NAME_E'cho: "E'cho"
+ NAME_Rover: "Rover"
+ NAME_Jasepe: "Jasepe"
+ NAME_Blaxe: "Blaxe"
+ NAME_Glavi: "Glavi"
+ NAME_Salvold: "Salvold"
+ NAME_Frince: "Frince"
