--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -160,7 +160,7 @@
  giant_undead_army:0 "กองทัพผีดิบร่างยักษ์"
  giant_undead_army_desc:0 "A gigantic skeleton ready to wreak havoc on the universe. It will not be gentle when invading a planet."
  giant_undead_army_plural:0 "กองทัพผีดิบร่างยักษ์"
- undead_defense_army:0 "Undead Defense Army"
+ undead_defense_army:0 "กองทัพอันเดด (ป้องกัน)"
  undead_defense_army_desc:0 "Undead soldiers lifted from the grave by necromancers, brought back to life to protect our planets from all that might threaten them!"
  job_necromancer:1 "Necromancer"
  job_necromancer_plural:1 "Necromancer"
@@ -237,7 +237,7 @@
  job_reassigner_desc:0 "Reassigners ensure that once a Megacorporation's citizen has passed on, their remains will stay at work until the fulfillment of their contract."
  job_reassigner_plural:0 "ผู้รับโอนสิทธิ์ใหม่"
  job_reassigner_effect_desc:0 "- £job_necromancer£ $job_reassigner_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! และ ทั้ง £food£ §Y$food$§! หรือ £minerals£ §Y$minerals$§! เป็น £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!\n- £pop£  ประชากรที่ประกอบขึ้นมาทั้งหมดจะมีคุณลักษณะ §Yซอมบี้§!"
- planet_reassigners:0 "Reassigner Jobs"
+ planet_reassigners:0 "งาน ผู้รับโอนสิทธิ์ใหม่"
  mod_job_reassigner_add:0 "งาน $job_reassigner$"
  trait_zombie:0 "ซอมบี้"
  trait_zombie_desc:0 "§LThe remains of a once-proud sapient being, this husk is not suitable for much more than the simplest tasks.§!"
