--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -664,11 +664,11 @@
  LEADER_CAPACITY_PENALTY:1 "The upkeep of your $CLASS_PLURAL$ is increased by $UPKEEP$, and $CLASS_PLURAL$ gain $EXPERIENCE$ less experience due to being over your $CLASS$ Capacity."
  not_councilor_warning:0 "$TRIGGER_FAIL$ §Rคุณสมบัติของสภาจะมีผลก็ต่อเมื่อผู้นำได้รับการแต่งตั้งให้ดำรงตำแหน่งในสภาเท่านั้น§!"
  job_traits_on_ruler_warning:1 "$TRIGGER_FAIL$ §RSome effects might be disabled when the Leader is the Empire's Ruler.§!"
- leader_trait_adventurous_spirit:0 "Adventurous Spirit"
+ leader_trait_adventurous_spirit:0 "จิตวิญญาณของนักผจญภัย"
  leader_trait_adventurous_spirit_desc:1 "This leader has a yearning for adventure and an overt distaste for boardroom politics."
  leader_trait_adventurous_spirit_effect:1 "[GetAdventurousSpiritEffect]"
  adventurous_spirit_not_on_council:0 "$t$§EEffects apply while NOT on the Council.§!"
- adventurous_spirit_on_council:0 "$t$§RThis trait has no effect while Leader is on the Council.§!"
+ adventurous_spirit_on_council:0 "§Rคุณลักษณะนี้ไม่มีผลใดๆในขณะที่ผู้นำอยู่ในสภา§!"
  leader_trait_adventurous_spirit_1_tt:1 "$THIS_LEADER_TXT$:§L\n$t$$mod_leaders_upkeep_mult$: §V-10%§!§!\n$adventurous_spirit_on_council$"
  leader_trait_adventurous_spirit_2_tt:1 "$THIS_LEADER_TXT$:§L\n$t$$mod_leaders_upkeep_mult$: §V-25%§!\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$:§V+5%§!§!\n$adventurous_spirit_on_council$"
  leader_trait_adventurous_spirit_3_tt:0 "$THIS_LEADER_TXT$:§L\n$t$$mod_leaders_upkeep_mult$: §V-25%§!\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §V+10%§!§!\n$adventurous_spirit_on_council$"
@@ -715,7 +715,7 @@
  leader_trait_entrepreneur_desc:1 "This leader has an enterprising mind, designing and producing impressive amounts of goods."
  leader_trait_entrepreneur_2:0 "$leader_trait_entrepreneur$ II"
  leader_trait_entrepreneur_2_desc:0 "$leader_trait_entrepreneur_desc$"
- leader_trait_venerated:1 "Celebrity"
+ leader_trait_venerated:1 "มีชื่อเสียงโด่งดัง"
  leader_trait_venerated_desc:1 "This leader is highly respected by others."
  leader_trait_venerated_2:0 "$leader_trait_venerated$ II"
  leader_trait_venerated_2_desc:0 "$leader_trait_venerated_desc$"
@@ -940,10 +940,10 @@
  leader_trait_manufacturer_2:0 "$leader_trait_manufacturer$ II"
  leader_trait_manufacturer_2_desc:0 "$leader_trait_manufacturer_desc$"
  leader_trait_salvager:0 "นักกู้ซาก"
- salvage_ship_restrictions: "§PWe may only Salvage military ships from other empires.§!"
- leader_trait_salvager_effect:1 "$SYSTEM_EFFECTS_TXT$:\n$t$When Debris is Scavenged/Researched in System:\n$tt$Chance to Salvage Ships: §Y10%§!\n$tt$$salvage_ship_restrictions$"
- leader_trait_salvager_effect_2:1 "$SYSTEM_EFFECTS_TXT$:\n$t$When Debris is Scavenged/Researched in System:\n$tt$Chance to Salvage Ships: §Y20%§!\n$tt$$salvage_ship_restrictions$"
- leader_trait_salvager_effect_3:1 "$SYSTEM_EFFECTS_TXT$:\n$t$When Debris is Scavenged/Researched in System:\n$tt$Chance to Salvage Ships: §Y30%§!\n$tt$$salvage_ship_restrictions$"
+ salvage_ship_restrictions: "§Pเราสามารถกอบกู้ยานรบของจักรวรรดิอื่นได้เพียงเท่านั้น§!"
+ leader_trait_salvager_effect:1 "$SYSTEM_EFFECTS_TXT$:\n$t$เมื่อเศษซากถูกเก็บกู้/วิจัยในระบบ:\n$tt$มีโอกาสในการกอบกู้ยาน: §Y10%§!\n$tt$$salvage_ship_restrictions$"
+ leader_trait_salvager_effect_2:1 "$SYSTEM_EFFECTS_TXT$:\n$t$เมื่อเศษซากถูกเก็บกู้/วิจัยในระบบ:\n$tt$มีโอกาสในการกอบกู้ยาน: §Y20%§!\n$tt$$salvage_ship_restrictions$"
+ leader_trait_salvager_effect_3:1 "$SYSTEM_EFFECTS_TXT$:\n$t$เมื่อเศษซากถูกเก็บกู้/วิจัยในระบบ:\n$tt$มีโอกาสในการกอบกู้ยาน: §Y30%§!\n$tt$$salvage_ship_restrictions$"
  leader_trait_salvager_desc:2 "This academic is a salvaging savant who can disassemble even the most damaged ships and repurpose them as something useful."
  leader_trait_inquisitive:1 "อยากรู้อยากเห็น"
  leader_trait_inquisitive_desc:0 "This leader possesses a highly inquisitive mind, always trying to find another field of research to explore and study."
@@ -1304,9 +1304,9 @@
  mod_ship_science_alloys_upkeep_add:0 "ยานวิจัยวิทยาศาสตร์มีค่าบำรุงรักษาที่เป็น £alloys£ โลหะผสม"
  mod_salvage_chance_add:0 "Chance to Salvage Ships"
  MOD_COUNTRY_COMMERCIAL_PACT_MULT:0 "ประสิทธิภาพของสนธิสัญญาการค้า"
- mod_planet_soldiers_energy_produces_add:0 "£energy£ $energy$ from £job_soldier£ [GetSoldierPlural]"
- mod_planet_soldiers_minerals_produces_add:0 "£minerals£ $minerals$ from £job_soldier£ [GetSoldierPlural]"
- mod_planet_soldiers_food_produces_add:0 "£food£ $food$ from £job_soldier£ [GetSoldierPlural]"
+ mod_planet_soldiers_energy_produces_add:0 "£energy£ $energy$ จาก £job_soldier£ [GetSoldierPlural]"
+ mod_planet_soldiers_minerals_produces_add:0 "£minerals£ $minerals$ จาก £job_soldier£ [GetSoldierPlural]"
+ mod_planet_soldiers_food_produces_add:0 "£food£ $food$ จาก £job_soldier£ [GetSoldierPlural]"
  mod_country_agendas_unity_produces_add:0 "$mod_country_unity_produces_add$"
  mod_negative_traits_leader:0 "คุณลักษณะเชิงลบสูงสุดของผู้นำ"
  mod_negative_traits_country:0 "$mod_negative_traits_leader$"
@@ -1359,19 +1359,19 @@
  mod_leader_scientists_exotic_gases_produces_add:0 "$mod_country_base_exotic_gases_produces_add$"
  mod_leader_scientists_rare_crystals_produces_add:0 "$mod_country_base_rare_crystals_produces_add$"
  mod_leader_scientists_sr_zro_produces_add:0 "$mod_country_base_sr_zro_produces_add$"
- mod_planet_districts_farming_society_research_produces_add:1 "$r_society$ from £district£ $planet_districts_farms$"
- mod_planet_districts_mining_engineering_research_produces_add:1 "$r_engineering$ from £district£ $planet_districts_mines$"
- mod_planet_districts_generator_physics_research_produces_add:1 "$r_physics$ from £district£ $planet_districts_generators$"
- mod_planet_districts_hab_energy_physics_research_produces_add:0 "$r_physics$ from £district£ $planet_districts_hab_energy$"
- mod_planet_districts_hab_mining_engineering_research_produces_add:0 "$r_engineering$ from £district£ $planet_districts_hab_mining$"
- mod_planet_districts_rw_generator_physics_research_produces_add:0 "$r_physics$ from £district£ $planet_districts_rw_generator$"
- mod_planet_districts_rw_farming_society_research_produces_add:0 "$r_society$ from £district£ $planet_districts_rw_farming$"
- mod_pop_category_workers_society_research_produces_add:1 "£society_research£ $society_research$ from £pop_cat_worker£ $pop_cat_worker_plural$"
- mod_pop_category_workers_unity_produces_add:1 "£unity£ $unity$ from £pop_cat_worker£ $pop_cat_worker_plural$"
- mod_pop_category_specialists_society_research_produces_add:1 "£society_research£ $society_research$ from £pop_cat_specialist£ $pop_cat_specialist_plural$"
- mod_pop_category_specialists_unity_produces_add:1 "£unity£ $unity$ from £pop_cat_specialist£ $pop_cat_specialist_plural$"
- mod_pop_category_rulers_society_research_produces_add:1 "£society_research£ $society_research$ from £pop_cat_ruler£ $pop_cat_ruler_plural$"
- mod_pop_category_rulers_unity_produces_add:1 "£unity£ $unity$ from £pop_cat_ruler£ $pop_cat_ruler_plural$"
+ mod_planet_districts_farming_society_research_produces_add:1 "$r_society$ จาก £district£ $planet_districts_farms$"
+ mod_planet_districts_mining_engineering_research_produces_add:1 "$r_engineering$ จาก £district£ $planet_districts_mines$"
+ mod_planet_districts_generator_physics_research_produces_add:1 "$r_physics$ จาก £district£ $planet_districts_generators$"
+ mod_planet_districts_hab_energy_physics_research_produces_add:0 "$r_physics$ จาก £district£ $planet_districts_hab_energy$"
+ mod_planet_districts_hab_mining_engineering_research_produces_add:0 "$r_engineering$ จาก £district£ $planet_districts_hab_mining$"
+ mod_planet_districts_rw_generator_physics_research_produces_add:0 "$r_physics$ จาก £district£ $planet_districts_rw_generator$"
+ mod_planet_districts_rw_farming_society_research_produces_add:0 "$r_society$ จาก £district£ $planet_districts_rw_farming$"
+ mod_pop_category_workers_society_research_produces_add:1 "£society_research£ $society_research$ จาก £pop_cat_worker£ $pop_cat_worker_plural$"
+ mod_pop_category_workers_unity_produces_add:1 "£unity£ $unity$ จาก £pop_cat_worker£ $pop_cat_worker_plural$"
+ mod_pop_category_specialists_society_research_produces_add:1 "£society_research£ $society_research$ จาก £pop_cat_specialist£ $pop_cat_specialist_plural$"
+ mod_pop_category_specialists_unity_produces_add:1 "£unity£ $unity$ จาก £pop_cat_specialist£ $pop_cat_specialist_plural$"
+ mod_pop_category_rulers_society_research_produces_add:1 "£society_research£ $society_research$ จาก £pop_cat_ruler£ $pop_cat_ruler_plural$"
+ mod_pop_category_rulers_unity_produces_add:1 "£unity£ $unity$ จาก £pop_cat_ruler£ $pop_cat_ruler_plural$"
  mod_pop_category_drones_society_research_produces_add:0 "Drones £society_research£ $society_research$ Produced"
  mod_pop_category_drones_unity_produces_add:0 "Drones £unity£ $unity$ Produced"
  mod_leader_commanders_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
@@ -1409,8 +1409,8 @@
  mod_country_councilor_physics_research_produces_add:0 "$mod_leader_scientists_physics_research_produces_add$"
  mod_country_councilor_society_research_produces_add:0 "$mod_leader_scientists_society_research_produces_add$"
  mod_country_councilor_engineering_research_produces_add:0 "$mod_leader_scientists_engineering_research_produces_add$"
- mod_planet_priests_society_research_produces_add:0 "£society£ $SOCIETY$ from £job_priest£ £job_death_priest£ $job_priest_plural$"
- mod_planet_pop_assemblers_engineering_research_produces_add:0 "£engineering£ $ENGINEERING$ from £job_roboticist£ $job_roboticist_plural$"
+ mod_planet_priests_society_research_produces_add:0 "£society£ $SOCIETY$ จาก £job_priest£ £job_death_priest£ $job_priest_plural$"
+ mod_planet_pop_assemblers_engineering_research_produces_add:0 "£engineering£ $ENGINEERING$ จาก £job_roboticist£ $job_roboticist_plural$"
  paragon_2.2005.name:0 "Uncovered Hidden Resources"
  paragon_2.2005.desc:0 "[Root.Leader.GetTitle] §Y[Root.Leader.GetName]§!'s experience as a §YProspector§! has helped uncover resources hidden on the surface of §Y[From.GetName]§!. We can construct mining stations in orbit to exploit this discovery."
  paragon_2.2010.name:0 "$paragon_2.2005.name$"
