--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -299,8 +299,8 @@
  r_wormhole_key:0 "The Key"
  r_wormhole_key_desc:0 "Proof of Exakeides's Vagrosian legacy, this Relic is capable of folding two points in space, allowing near-instantaneous travel across the expanse."
  wormhole_key_relic_effect:0 "§GAllows every ship to make jumps, bypassing hyperlanes§!\n$MOD_SHIP_JUMPDRIVE_COOLDOWN_MULT$: §G-50%§!\n$MOD_SHIP_DISENGAGE_CHANCE_MULT$: §G+75%§!"
- mod_planet_miners_engineering_research_produces_add:0 "£engineering_research£ $engineering_research$ from £job_miner£ [GetMinerPlural]"
- mod_planet_miners_volatile_motes_produces_add:0 "£volatile_motes£ $volatile_motes$ from £job_miner£ [GetMinerPlural]"
+ mod_planet_miners_engineering_research_produces_add:0 "£engineering_research£ $engineering_research$ จาก £job_miner£ [GetMinerPlural]"
+ mod_planet_miners_volatile_motes_produces_add:0 "£volatile_motes£ $volatile_motes$ จาก £job_miner£ [GetMinerPlural]"
  mod_job_scrap_miner_per_pop:0 "§G+1§! $job_scrap_miner$ Job per $VALUE$ Pops"
  mod_job_scrap_miner_per_pop_short:0 "\n§G+1§! £job_scrap_miner£ per $VALUE$ £pop£"
  mod_job_scrap_miner_drone_per_pop:0 "§G+1§! $job_scrap_miner_drone$ Job per $VALUE$ Pops"
@@ -480,14 +480,14 @@
  paragon.280.name:0 "$NAME_Astrocreator_Azaryn$"
  paragon.280.desc:0 "§H$NAME_Astrocreator_Azaryn$ is crestfallen.§!\n\nI knew you were greedy, but I did not expect you to be so proud that you would risk hurting your own people. They are dying!\n\nI am preparing countermeasures to end this rampant growth. But the victims of your negligence will require immediate medical treatment."
  paragon.280.a:0 "We will take care of them."
- paragon.550.name:0 "Death of a Great Leader"
- paragon.550.desc:2 "Our great §Y[From.GetTitle] [From.GetName]§! has passed away at the age of [From.GetAge] while in service to our empire. The people clamor for a memorial service to honor this leader's contribution to the §Y[Root.GetName]§!. A grand event will give everyone closure, and bolster our ideals."
- paragon.550.a:0 "Let the masses mourn."
- paragon.550.b:1 "A private procession will suffice."
- paragon.550.c:1 "[From.GetHeSheCap] did nothing to deserve such honors."
- paragon.550.d:1 "Donate the body to science."
- paragon.550.e:1 "Chant for [From.GetHisHer] soul."
- paragon.550.f:1 "Plan a grand parade. Now."
+ paragon.550.name:0 "การตายของผู้นำที่ยิ่งใหญ่"
+ paragon.550.desc:2 "§Y[From.GetTitle] [From.GetName]§! ผู้ยิ่งใหญ่ของเรา ได้เสียชีวิตลงแล้วในวัย [From.GetAge] ปี ขณะที่รับใช้จักรวรรดิของเรา ประชาชนไว้อาลัยเพื่อเป็นเกียรติแก่การมีส่วนร่วมของผู้นำคนนี้ต่อ §Y[Root.GetName]§!"
+ paragon.550.a:0 "ให้มวลชนไว้อาลัย"
+ paragon.550.b:1 "ขบวนส่วนตัวก็เพียงพอแล้ว"
+ paragon.550.c:1 "[From.GetHeSheCap]ไม่ได้ทำอะไรเลยที่สมควรได้รับเกียรติเช่นนี้"
+ paragon.550.d:1 "บริจาคร่างกายให้กับวิทยาศาสตร์"
+ paragon.550.e:1 "สวดส่งวิญญาณของ[From.GetHisHer]"
+ paragon.550.f:1 "วางแผนจัดขบวนพาเหรดใหญ่"
  paragon.550.g:2 "Set up a foundation in [From.GetHisHer] name."
  paragon.550.h:1 "Keep it traditional."
  paragon.550.i:1 "Launch the deceased into space."
