--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -617,6 +617,8 @@
  IS_NOT_IMMORTAL_TRIGGER:0 "Is mortal"
  IS_HIDDEN_TRIGGER: "Is hidden"
  IS_NOT_HIDDEN_TRIGGER: "Is not hidden"
+ IS_LEADER_CLASS: "Is $CLASS|H$"
+ IS_NOT_LEADER_CLASS: "Is NOT $CLASS|H$"
  IS_JOB_OF_CATEGORY:0 "$JOB|Y$ is of the $CAT|Y$ Category"
  IS_NOT_JOB_OF_CATEGORY:0 "$JOB|Y$ is NOT of the $CAT|Y$ Category"
  HAS_ACCESS_MILITARY:0 "Has Military Access"
@@ -1118,7 +1120,7 @@
  ADD_COLONY_PROGRESS:0 "Colony progress changed by $PROGRESS$\n"
  SET_CAPITAL_EFFECT:0 "Sets planet to capital of owner\n"
  SET_CAPITAL_REMOVE_EFFECT:0 "Removes planet as capital of owner\n"
- CHANGE_PC_EFFECT:0 "Change planet class to $CLASS|Y$\n"
+ CHANGE_PC_EFFECT:0 "เปลี่ยนคลาส(ประเภท)ดาวเคราะห์เป็น $CLASS|Y$\n"
  KILL_POP_EFFECT:0 "Dies\n"
  RESETTLE_POP_EFFECT:0 "Is resettled to $PLANET|Y$"
  ENSLAVE_POP_EFFECT:0 "Enslaved\n"
