--- a/mod/thmod/localisation/english/additional_content_l_english.yml
+++ b/mod/thmod/localisation/english/additional_content_l_english.yml
@@ -9,6 +9,10 @@
  ADDITIONAL_CONTENT_PORTRAITS: "Portraits"
  ADDITIONAL_CONTENT_SCREENSHOTS: "Screenshots"
  ADDITIONAL_CONTENT_HIDE_ALL_OWNED: "Hide All Owned"
+ ACB_SUBSCRIPTION_DLC_LIST_TITLE: "Subscribing now will provide access to the following content:"
+ ACB_SUBSCRIPTION_CLICK_DESC: "Click to open in store"
+ ACB_SUBSCRIPTION_INCLUDED_CONTENT_TITLE: "Included Content"
+ ACB_SUBSCRIPTION_INCLUDED_SUBSCRIPTION_PLANS_TITLE: "Subscription Plans"
  ADDITIONAL_CONTENT_BUY_IN_STEAM: "Buy in Steam"
  ADDITIONAL_CONTENT_BUY_IN_MICROSOFT_STORE: "Buy in Microsoft Store"
  ADDITIONAL_CONTENT_LABEL_NEW: "New"
