--- a/mod/thmod/localisation/english/astral_rifts_1_l_english.yml
+++ b/mod/thmod/localisation/english/astral_rifts_1_l_english.yml
@@ -491,6 +491,6 @@
  astral_rift.1955.desc: "We have discovered a disturbing development.\n\n[from.GetName] has been secretly sending members of our population back through the $astral_rift_volcano$ Astral Rift.\n\nThey claim it is being done in an effort to "restore the balance.""
  astral_rift.1955.a: "Dispose of [from.GetHimHer]."
  astral_rift.1955.b: "Allow [from.GetHimHer] to continue."
- MESSAGE_RESTORING_THE_BALANCE_SACRIFICE_TITLE: "$restoring_the_balance$"
+ MESSAGE_RESTORING_THE_BALANCE_SACRIFICE_TITLE: "$restoring_the_balance_modifier$"
  MESSAGE_RESTORING_THE_BALANCE_SACRIFICE_DESC: "Population from [event_target:sacrificed_pop_planet.GetName] has been sent back into the $astral_rift_volcano$ Astral Rift, in an effort to restore the balance we have disrupted."
  MESSAGE_RESTORING_THE_BALANCE_SACRIFICE_DESC_LEADER: "Population from [event_target:sacrificed_pop_planet.GetName] has been sent back into the $astral_rift_volcano$ Astral Rift by $LEADER|Y$, in an effort to restore the balance."
