--- a/mod/thmod/localisation/english/events_2_l_english.yml
+++ b/mod/thmod/localisation/english/events_2_l_english.yml
@@ -193,6 +193,7 @@
  anomaly.143.desc:1 "The [Root.GetName] has entered the [Root.GetStarName] system, where its crew report another object in orbit bearing strong resemblance to a shrine to the Untold."
  anomaly.143.a:0 "Good work."
  anomaly.144.name:0 "Old Gods: Approaching the Percipient"
+ anomaly.144.desc: "Expecting perhaps for a more difficult search when scanning for the shrine to the Percipient, the crew of [Root.GetName] were not ready to see it obviously signposed when entering [Root.GetStarName]. Artifical mineral patterns have been carved around on stellar bodies in the systems pointing to a central location."
  anomaly.144.a:0 "I see."
  anomaly.145.name:0 "What Music They Make"
  anomaly.145.desc:1 "The animals of [From.GetName] - predator and prey alike - gather together as night falls and... sing.\n\nThe howls, clicks, chirps, roars and hisses seem discordant at first, but underneath lies a recognizable melody. The crew of the [Root.GetName] suggest it's even rather pleasant to hear.\n\nWe believe an external influence must have interfered in order to develop this non-sapient choir. We cannot fathom as to why, however we may be able to figure out how they did it."
@@ -348,7 +349,7 @@
  anomaly.285.a:0 "Most intriguing."
  anomaly.285.a.tooltip:1 "Adds the §YUnusual Tectonics§! modifier to [From.GetName]:\n£engineering£ §G+2§!\n£physics£ §G+2§!"
  anomaly.290.name:0 "Rock Potential"
- anomaly.290.desc:0 "[From.GetName] is exceptionally rich in minerals.\n\nMinerals that are, unfortunately, of no use to us. However, Science Officer [Root.GetLeaderName] believes the many elements in the crust of [From.GetName] can be transformed into potentially more useful forms through positron bombardment.\n\nThe [Root.GetName] has requests that the [Root.Owner.GetName] set aside 100 Energy Credits for the purposes of this project."
+ anomaly.290.desc:0 "[From.GetName] is exceptionally rich in minerals.\n\nMinerals that are, unfortunately, of no use to us. However, Science Officer [Root.GetLeaderName] believes the many elements in the crust of [From.GetName] can be transformed into potentially more useful forms through positron bombardment.\n\nThe [Root.GetName] has requests that the [Root.Owner.GetName] set aside 1000 Energy Credits for the purposes of this project."
  anomaly.290.a:0 "No. No, we will not."
  anomaly.290.b:0 "Very well, ready the positron charges."
  anomaly.292.desc:0 "The crew of the [Root.GetName] are pleased to report that the experiment was a success, and a significant number of dense mineral veins on [From.From.GetName] have been transmuted into usable resources."
@@ -1340,7 +1341,7 @@
  origin.13.notmet.desc: "$origin.13.desc.intro$\n\nThe sheer sophistication of this device parallels that of even [overlord.GetAdj] technology, however its design is distinctly alien. We must therefore assume the marker belongs to some contemporary of theirs, past or present. Judging by the various symbols etched onto its exterior: it may even be marking out a holy site."
  origin.13.a: "Preposterous."
  fallen_empire_refuse_tooltip:0 "§H[From.GetName]§! will be very angry, and are likely to attack us."
- fallen_empire_happy_tooltip:0 "§H[FallenEmpireTaskOrigin.GetName]§! will be pleased, and may show us favor in the future."
+ fallen_empire_happy_tooltip:0 "§H[FallenEmpireTaskOrigin.GetName]§! จะยินดีและชื่นชอบเราในภายภาคหน้า"
  fallen_empire_unhappy_tooltip:0 "§H[FallenEmpireTaskOrigin.GetName]§! จะไม่พอใจ"
  fallen_empire_angry_tooltip:0 "§H[FallenEmpireTaskOrigin.GetName]§! will be most displeased, and may decide to teach us a lesson."
  fallen_empire_enigmatic_tooltip:0 "§H[FallenEmpireTaskOrigin.GetName]§! may or may not react to our refusal."
@@ -1421,12 +1422,12 @@
  fallen_empires_tasks.20.a:0 "Um... oops?"
  fallen_empires_tasks.22.name:0 "การติดต่อจาก §H[FallenEmpireTaskOrigin.GetName]§!"
  fallen_empires_tasks.22.desc:0 "[Root.GetRulerTitle] [Root.GetRulerName]. We understand that your empire is home to an individual whose brilliant mind transcends the tragic primitiveness of your species. While the talents of §H[FallenEmpireScientistTarget.GetName]§! are sadly wasted in the [Root.GetName], we [FallenEmpireTaskOrigin.GetSpeciesName] always have a use for skilled scientists to work in our archives. As such, we are offering you a unique chance to earn our favor by allowing us to take charge of [FallenEmpireScientistTarget.GetHimHer]. We already have a ship en route to pick [FallenEmpireScientistTarget.GetHimHer] up, so you need only say "yes" and everything will be settled.\n\nI'm sure you won't want to disappoint us... do you?"
- fallen_empires_tasks.22.a:0 "Very well, you may take [FallenEmpireScientistTarget.GetHimHer]."
- fallen_empires_tasks.22.b:0 "We will never give one our own to alien hands!"
- fallen_empires_tasks.22.c:0 "It is not up to us to decide!"
- fallen_empires_tasks.22.d:0 "Give up our brightest mind? I think not."
- fallen_empires_tasks.22.e:0 "No, we need [FallenEmpireScientistTarget.GetHimHer]."
- fallen_empires_tasks.22.tooltip:0 "§H[FallenEmpireScientistTarget.GetName]§! will leave our empire."
+ fallen_empires_tasks.22.a:0 "ดีมากที่คุณ จะพา[FallenEmpireScientistTarget.GetHimHer]ไป"
+ fallen_empires_tasks.22.b:0 "เราจะไม่มอบของๆเรา ให้กับต่างพวกดาวเด็ดขาด!"
+ fallen_empires_tasks.22.c:0 "มันไม่ได้ขึ้นอยู่กับการตัดสินใจของเรา!"
+ fallen_empires_tasks.22.d:0 "ผมคิดว่าไม่"
+ fallen_empires_tasks.22.e:0 "ไม่ เราต้องการ[FallenEmpireScientistTarget.GetHimHer]"
+ fallen_empires_tasks.22.tooltip:0 "§H[FallenEmpireScientistTarget.GetName]§! จะออกจากจักรวรรดิเรา"
  fallen_empires_tasks.24.name:0 "การติดต่อจาก §H[FallenEmpireTaskOrigin.GetName]§!"
  fallen_empires_tasks.24.desc:0 "Greetings, [Root.GetSpeciesNamePlural]! We understand that your empire has come into possession of a cache of data containing the brain scans of an extinct species, taken from the very world they once inhabited. Even though your species is still too primitive to utilize this data, we laud your efforts in preserving this last remnant of a once vibrant civilization. As part of our efforts to conserve and catalog endangered species in our §HEndangered Species Preserve§!, we wish to take this data and use our cloning technologies to bring a small number of this species back to life. Will you share it with us so we can fulfill their last wish together?"
  fallen_empires_tasks.24.a:0 "We'll make a copy for you."
