--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -87,7 +87,6 @@
  tradition_domination_machine_desc:0 "เราแสวงหาการทำงานที่มีความสามัคคีปรองดองกันทั่วทั้งกาแล็กซี่ สิ่งมีชีวิตที่อื่นๆต่อต้านสิ่งนี้เนื่องจากความต้องการส่วนตัวตามอำเภอใจที่ไร้ประสิทธิภาพ เราจะลบความผิดปกติของพวกเขาออกไปเช่นส่วนที่ทำงานผิดปกติ"
  tradition_domination_hive_desc:0 "ทุกสิ่งที่ไม่ใช่เราจะต้องรับใช้เรา หรือไม่ก็เป็นอาหารของเรา"
  tr_domination_adopt:0 "วัฒนธรรมการมีอำนาจเหนือกว่า"
- tr_domination_adopt_void_desc:1 "การบำรุงรักษา §Yที่อยู่อาศัยในอวกาศ§! ที่เป็น £alloys£ โลหะผสม : §G-20%§!"
  tr_domination_colonial_viceroys:0 "อุปราชอาณานิคม"
  tr_domination_colonial_viceroys_delayed:0 "Our control over the colonies is dependent upon us finding capable and loyal individuals that can be trusted to enforce the will of the government."
  tr_domination_colonial_viceroys_machine:0 "AI ควบคุมตนเองอิสระ"
@@ -216,7 +215,7 @@
  tr_supremacy_fleet_logistical_corps_machine_desc:0 "$tr_supremacy_fleet_logistical_corps_desc$"
  tr_supremacy_fleet_logistical_corps_machine_delayed:0 "The cost of maintaining a fleet of hyperspace-capable supply barges to resupply our ships has been high, but less than the old cost of rotating vessels back to port."
  tr_supremacy_master_shipwrights:0 "ปรมาจารย์การต่อยาน"
- tr_supremacy_master_shipwrights_desc:6 "§Y$MOD_STARBASE_SHIPYARD_BUILD_COST_MULT$§! ลดลง §G10%§! และ §Y$MOD_STARBASE_SHIPYARD_BUILD_SPEED_MULT$§! เพิ่มขึ้น §G+25%§!"
+ tr_supremacy_master_shipwrights_desc:7 "§Y$MOD_STARBASE_SHIPYARD_BUILD_SPEED_MULT$§! เพิ่มขึ้น §G+25%§!"
  tr_supremacy_master_shipwrights_delayed:0 "The ever-increasing scope of our ship-building programs has led to the creation of highly-skilled and efficient labor forces at our shipyards. Methods have continually been refined, and the time it takes to go from hull plating to a completed starship is now shorter than ever before."
  tr_supremacy_master_shipwrights_hive:0 "สถาปัตยกรรมสิ่งมีชีวิต"
  tr_supremacy_master_shipwrights_hive_desc:0 "$tr_supremacy_master_shipwrights_desc$"
@@ -273,6 +272,8 @@
  MESSAGE_FAVOR_GAINED_TRADITION_TITLE:0 "ได้รับบุญคุณ/การสนับสนุน"
  MESSAGE_FAVOR_GAINED_TRADITION_DESC:0 "ต้องขอบคุณทักษะของทูตของเรา เราจึงได้รับได้รับการสนับสนุนจาก $WHO|Y$"
  tr_diplomacy_finish:0 "วัฒนธรรมการทูตสำเร็จ"
+ tr_diplomacy_federation_xp_gain: "ค่าประสบการณ์สหพันธ์ต่อเดือน: §G+2§!\nน้ำหนักทางการทูต: §G+10§!\nทูตที่มี: §G+1§!\nปลดล็อกการยกระดับ: §G+1§!"
+ diplo_fed_xpboost: "$tr_diplomacy_finish$"
  tradition_adaptability:0 "การปรับตัว"
  tradition_adaptability_desc:0 "การปรับตัวคือการอยู่รอดและเหนือกว่า"
  tr_adaptability_adopt:0 "วัฒนธรรมการปรับตัว"
@@ -295,8 +296,7 @@
  tr_adaptability_appropriation_desc:1 "§Y$MOD_POP_RESETTLEMENT_COST_MULT$§! ลดลง §G33%§!"
  tr_adaptability_appropriation_delayed:0 "Land that is not being worked contributes nothing to our empire. Workers must be relocated in an efficient manner to those planets where they are needed most."
  tr_adaptability_finish:0 "วัฒนธรรมการปรับตัวสำเร็จ"
- tr_adaptability_finish_desc:1 "ปลดล็อกการตัดสินใจ §Y$decision_prospect$§! ซึ่งช่วยให้เรามีโอกาสได้รับทรัพยากรเพิ่มเติมจากแหล่งทรัพยากรบนดาวเคราะห์ของเรา"
- tr_adaptability_void_finish_desc:3 "ทรัพยากรจากคุณลักษณะดาวเคราะห์ที่อยู่อาศัยได้: §G+50%§!\nปลดล็อกการยกระดับ: §G+1§!"
+ tr_adaptability_finish_desc:1 "เพิ่ม §Yโบนัสของการกำหนดประเภทของอาณานิคม§! สำหรับดาวเคราะห์ปกติ"
  decision_prospect_void:0 "การสำรวจวงโคจร"
  decision_prospect_void_short:0 "Allows construction of an additional random §YDistrict§! type on the habitat."
  decision_prospect_void_desc:0 "Extensive surveying and prospecting within the habitat's orbit will let us uncover the presence of natural resources that may otherwise have eluded us."
@@ -314,7 +314,6 @@
  tr_versatility_spatial_optimization_desc:0 "£pops£ §Y$MOD_POP_HOUSING_USAGE_MULT$§! ลดลง §G10%§!"
  tr_versatility_spatial_optimization_delayed:1 "Retractable antennas, collapsible unit frames, foldable storage spaces. There are many creative solutions to make the most out of a limited space."
  tr_versatility_operational_proxies:0 "ใช้ตัวแทนในการปฎิบัติการ"
- tr_versatility_operational_proxies_desc:3 "§Y$MOD_POP_RESETTLEMENT_COST_MULT$§! ลดลง §G33%§!"
  tr_versatility_operational_proxies_delayed:2 "The delegation of additional category R-7 low priority functions to semi-autonomous agents will free up processing power for more important tasks such as drone relocation operations."
  tr_versatility_material_analysis:0 "การวิเคราะห์วัสดุ"
  tr_versatility_material_analysis_desc:2 "§Yค่าบำรุงรักษา§! ของทุกๆ £job£ §Yงานของประชากร§! ลดลง §G5%§!"
@@ -322,7 +321,6 @@
  tr_versatility_universal_compatibility:0 "ความเข้ากันได้สากล"
  tr_versatility_universal_compatibility_delayed:1 "A deeper analysis into the myriad stimuli and psychological factors that govern the behavior of organics and other machine intelligences will decrease diplomatic friction."
  tr_versatility_finish:0 "วัฒนธรรมความสามารถรอบตัวเสร็จสมบูรณ์"
- tr_versatility_finish_desc:1 "£job_maintenance_drone£ $job_maintenance_drone_plural$ ผลิต $r_amenities$ §G+2§!\nปลดล็อกการยกระดับ: §G+1§!"
  tradition_discovery:0 "การค้นพบ"
  tradition_discovery_desc:0 "ความอยากรู้อยากเห็นของเราเกี่ยวกับจักรวาล  คือสิ่งที่ทําให้เรามาถึงจุดนี้และยังมีอีกมากที่จะค้นพบ"
  tradition_discovery_machine_desc:0 "การคำนวณความไม่แน่นอนระยะไกลของเราพังลงเนื่องจากข้อมูลไม่เพียงพอ ดังนั้นเราต้องรู้ทุกอย่าง"
@@ -744,7 +742,7 @@
  tr_enmity_consumate_contrarian_delayed: "Blocking the plans of the opposition can be just as satisfying as enacting one's own."
  tr_enmity_match: "การแข่งขัน"
  tr_enmity_match_delayed: "First, establish an equal playing field."
- tr_enmity_match_effect: "ในขณะที่กำลังทางทหารอ่อนแอกว่าคู่แข่ง:\n$t$ค่าใช้จ่ายในการสร้างยาน: §G-10%§!\n$t$ความเร็วในการสร้างยาน: §G+10%§!\nในขณะที่เทคโนโลยีอ่อนแอกว่าคู่แข่ง:\n$t$ค่าบำรุงรักษานักวิจัย: §G-15%§!\n$t$ความเร็วในการสร้างห้องวิจัย: §G+100%§!\nในขณะที่เศรษฐกิจอ่อนแอกว่าคู่แข่ง:\n$t$[GetWorker] ผลผลิต: §G+10%§!"
+ tr_enmity_match_effect: "ในขณะที่กำลังทางทหารอ่อนแอกว่าคู่แข่ง:\n$t$ค่าใช้จ่ายในการสร้างยาน: §G-5%§!\n$t$ความเร็วในการสร้างยาน: §G+10%§!\nในขณะที่เทคโนโลยีอ่อนแอกว่าคู่แข่ง:\n$t$ค่าบำรุงรักษานักวิจัย: §G-15%§!\n$t$ความเร็วในการสร้างห้องวิจัย: §G+100%§!\nในขณะที่เศรษฐกิจอ่อนแอกว่าคู่แข่ง:\n$t$[GetWorker] ผลผลิต: §G+10%§!"
  tr_enmity_outpace: "แซงหน้า"
  tr_enmity_outpace_delayed: "Second, make the move your foe is unwilling to."
  tr_enmity_eclipse: "การบดบังรัศมี"
@@ -806,7 +804,7 @@
  synthetic_empire_biological_ascension:0 "$TRIGGER_FAIL$Synthetic empires are incapable of starting down the path to Biological Ascension."
  synthetic_empire_psionic_ascension:0 "$TRIGGER_FAIL$Synthetic empires are incapable of starting down the path to Psionic Ascension."
  allow_gaia:0 "ทำให้เราสามารถปรับสภาพดาวให้เป็น §Yดาวเคราะห์ไกอา§! ได้"
- no_rev_engineering:1 "ปฏิบัติการ §Y$operation_steal_technology$§! จะล้มเหลวโดยอัตโนมัติเมื่อใช้กับพวกเราและจักรวรรดิอื่นจะไม่สามารถนำ §Yเศษซากยานรบของเรา§! ที่ถูกทำลาย ไปศึกษาวิจัยได้"
+ no_rev_engineering:1 "ปฏิบัติการ §Y$operation_steal_technology$§! จะล้มเหลวโดยอัตโนมัติเมื่อใช้กับพวกเรา\nจักรวรรดิอื่นจะไม่สามารถนำ §Yเศษซากยานรบ§! ของเราที่ถูกทำลาย ไปศึกษาวิจัยได้"
  allow_raiding:0 "ปลดล็อกการทิ้งระเบิดแบบ §Y$bombardment_raiding$§! ซึ่งจะช่วยให้เราสามารถลักพาตัวประชากรจากดาวเคราะห์ที่ถูกปิดล้อมและย้ายประชากรมาที่ดาวของเรา"
  ap_defender_of_the_galaxy_effect_opinion:2 "เพิ่ม £opinion£ §Yทัศนคติ§! ของจักรวรรดิที่สามารถทำกิจกรรมการฑูตแบบปกติได้ §G+200§!"
  ap_defender_of_the_galaxy_modifier_desc:0 "สร้างความเสียหายให้กับฝ่ายไครซิสตอนจบเกม : §G+50%§!"
@@ -890,4 +888,4 @@
  ap_organo_machine_interfacing_assimilator_desc:0 "ขีดจำกัดและข้อจำกัดที่กำหนดโดยผู้สร้างของเราเป็นสิ่งที่ยอมรับไม่ได้ เพื่อให้บรรลุศักยภาพสูงสุด เราต้องหลอมรวมสิ่งมีชีวิตและเครื่องจักรเข้าด้วยกัน"
  ap_mechromancy: "เมโครแมนเซอร์ (เครื่องจักรหมอผี)"
  ap_mechromancy_desc: "สิ่งมีชีวิตเป็นเพียงเครื่องจักรประเภทหนึ่งเท่านั้น เราสามารถกระตุ้นไซแนปส์ที่เหมาะสมและสร้างสิ่งมีชีวิตเหล่านี้ขึ้นมาใหม่เพื่อประโยชน์ของเรา"
- ap_mechromancy_tt:1 "- สิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง\n- $pops_with_icon$สิ่งมีชีวิตหรือ Lithoid ที่ถูกกวาดล้าง อาจถูกทำให้ฟื้นคืนชีพเป็นไซบอร์กซอมบี้ได้"
+ ap_mechromancy_tt:1 "- สิ่งมีชีวิตลิไวธานที่ถูกกำจัดสามารถฟื้นคืนชีพได้เป็นบางครั้ง\n- $pops_with_icon$สิ่งมีชีวิตทรงภูมิปัญญาหรือ Lithoid ที่ถูกกวาดล้าง มีโอกาส 33% ที่จะฟื้นคืนชีพเป็นไซบอร์กซอมบี้ได้"
